Fix for multiple languages : we have /e/ account not google
grep -rl master_clear_desc | xargs sed -i 's/Google/\/e\//g'

--- a/res/values-am/strings.xml
+++ b/res/values-am/strings.xml
@@ -445,11 +445,11 @@
     <string name="crypt_keeper_warn_wipe" msgid="2738374897337991667">"ማስጠንቀቂያ፦ መሳሪያዎ ከ<xliff:g id="COUNT">^1</xliff:g> ተጨማሪ የመክፈት ሙከራዎች በኋላ ይጠረጋል!"</string>
     <string name="crypt_keeper_enter_password" msgid="2223340178473871064">"የይለፍቃልህን ተይብ"</string>
     <string name="crypt_keeper_failed_title" msgid="7133499413023075961">"ምስጠራ ስኬታማ አልነበረም"</string>
-    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"ማመስጠር ተቆራርጧል እና መጨረስ አይችልም። በመሆኑም፣ በጡባዊዎ ላይ ያለውን ውሂብ እስከነጭራሹ መድረስ አይቻልም። \n\n ጡባዊህን በመጠቀም ለመቀጠል፣ የፋብሪካ ዳግም አስጀምር ማከናወን አለብህ። ጡባዊህን ዳግም ካስጀመርክ በኋላ ስታዘጋጅ፣ ወደ Google መለያህ አስጠብቀህ የነበረውን ውሂብ እነበረበት ለመመለስ እድሉን ታገኛለህ።"</string>
-    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"ማመስጠር ተቆራርጧል እና መጨረስ አይችልም። በመሆኑም፣ በስልክዎ ላይ ያለውን ውሂብ እስከነጭራሹ መድረስ አይቻልም። \n\n ስልክዎን በመጠቀም ለመቀጠል፣ የፋብሪካ ዳግም አስጀምር ማከናወን አለብዎት። ስልክዎን ዳግም ካስጀመሩ በኋላ ሲያዘጋጁ፣ ወደ Google መለያዎ አስጠብቀው የነበረውን ውሂብ እነበረበት ለመመለስ እድሉን ያገኛሉ።"</string>
+    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"ማመስጠር ተቆራርጧል እና መጨረስ አይችልም። በመሆኑም፣ በጡባዊዎ ላይ ያለውን ውሂብ እስከነጭራሹ መድረስ አይቻልም። \n\n ጡባዊህን በመጠቀም ለመቀጠል፣ የፋብሪካ ዳግም አስጀምር ማከናወን አለብህ። ጡባዊህን ዳግም ካስጀመርክ በኋላ ስታዘጋጅ፣ ወደ /e/ መለያህ አስጠብቀህ የነበረውን ውሂብ እነበረበት ለመመለስ እድሉን ታገኛለህ።"</string>
+    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"ማመስጠር ተቆራርጧል እና መጨረስ አይችልም። በመሆኑም፣ በስልክዎ ላይ ያለውን ውሂብ እስከነጭራሹ መድረስ አይቻልም። \n\n ስልክዎን በመጠቀም ለመቀጠል፣ የፋብሪካ ዳግም አስጀምር ማከናወን አለብዎት። ስልክዎን ዳግም ካስጀመሩ በኋላ ሲያዘጋጁ፣ ወደ /e/ መለያዎ አስጠብቀው የነበረውን ውሂብ እነበረበት ለመመለስ እድሉን ያገኛሉ።"</string>
     <string name="crypt_keeper_data_corrupt_title" msgid="8759119849089795751">"መፍታት አልተሳካም"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"ያስገቡት የይለፍ ቃል ትክክል ነው፣ ይሁንና ውሂብዎ የተበላሸ ነው። \n\nጡባዊዎን መጠቀሙን ለመቀጠል የፋብሪካ ዳግም ማስጀመር ማከናወን ያስፈልግዎታል። ከዳግም ማስጀመሩ በኋላ ጡባዊዎን ሲያዋቅሩት በGoogle መለያዎ ላይ ምትኬ የተቀመጠለት ማንኛውም ውሂብ ወደነበረበት የመመለስ አጋጣሚ ይኖርዎታል።"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"ያስገቡት የይለፍ ቃል ትክክል ነው፣ ይሁንና ውሂብዎ የተበላሸ ነው። \n\nስልክዎን መጠቀሙን ለመቀጠል የፋብሪካ ዳግም ማስጀመር ማከናወን ያስፈልግዎታል። ከዳግም ማስጀመሩ በኋላ ስልክዎን ሲያዋቅሩት በGoogle መለያዎ ላይ ምትኬ የተቀመጠለት ማንኛውም ውሂብ ወደነበረበት የመመለስ አጋጣሚ ይኖርዎታል።"</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"ያስገቡት የይለፍ ቃል ትክክል ነው፣ ይሁንና ውሂብዎ የተበላሸ ነው። \n\nጡባዊዎን መጠቀሙን ለመቀጠል የፋብሪካ ዳግም ማስጀመር ማከናወን ያስፈልግዎታል። ከዳግም ማስጀመሩ በኋላ ጡባዊዎን ሲያዋቅሩት በ/e/ መለያዎ ላይ ምትኬ የተቀመጠለት ማንኛውም ውሂብ ወደነበረበት የመመለስ አጋጣሚ ይኖርዎታል።"</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"ያስገቡት የይለፍ ቃል ትክክል ነው፣ ይሁንና ውሂብዎ የተበላሸ ነው። \n\nስልክዎን መጠቀሙን ለመቀጠል የፋብሪካ ዳግም ማስጀመር ማከናወን ያስፈልግዎታል። ከዳግም ማስጀመሩ በኋላ ስልክዎን ሲያዋቅሩት በ/e/ መለያዎ ላይ ምትኬ የተቀመጠለት ማንኛውም ውሂብ ወደነበረበት የመመለስ አጋጣሚ ይኖርዎታል።"</string>
     <string name="crypt_keeper_switch_input_method" msgid="4168332125223483198">"የግቤት ስልት ቀይር"</string>
     <string name="suggested_lock_settings_title" msgid="8971630898700461034">"ማያ ገጽ መቆለፊያውን ያዘጋጁ"</string>
     <string name="suggested_lock_settings_summary" msgid="8778462376012231110">"መሣሪያዎን ይጠብቁ"</string>
@@ -1347,8 +1347,8 @@
     <string name="network_reset_not_available" msgid="7188610385577164676">"የአውታረመረብ ዳግም ማስጀመር ለዚህ ተጠቃሚ አይገኝም"</string>
     <string name="reset_network_complete_toast" msgid="787829973559541880">"የአውታረ መረብ ቅንብሮች ዳግም ጀምረዋል።"</string>
     <string name="master_clear_title" msgid="3531267871084279512">"ሁሉንም ውሂብ ደምስስ (የፋብሪካ ዳግም ማስጀመር)"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"ይህ ከእርስዎ ጡባዊ "<b>"ውስጣዊ ማከማቻ"</b>" የሚከተሉትን ጨምሮ:\n\n"<li>"የእርስዎ  Google መለያ"</li>\n<li>"ሥርዓት እና መተግበሪያ ውሂብ እና ቅንብሮች"</li>\n<li>"የወረዱ መተግበሪያዎች"</li>" ላይ ያሉ ሁሉንም ውሂብ ይሰርዛል።"</string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"ይህ ከእርስዎ ጡባዊ "<b>"ውስጣዊ ማከማቻ"</b>" የሚከተሉትን ጨምሮ:\n\n"<li>"የእርስዎ  Google መለያ"</li>\n<li>"ሥርዓት እና መተግበሪያ ውሂብ እና ቅንብሮች"</li>\n<li>"የወረዱ መተግበሪያዎች"</li>" ላይ ያሉ ሁሉንም ውሂብ ይሰርዛል።"</string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"ይህ ከእርስዎ ጡባዊ "<b>"ውስጣዊ ማከማቻ"</b>" የሚከተሉትን ጨምሮ:\n\n"<li>"የእርስዎ  /e/ መለያ"</li>\n<li>"ሥርዓት እና መተግበሪያ ውሂብ እና ቅንብሮች"</li>\n<li>"የወረዱ መተግበሪያዎች"</li>" ላይ ያሉ ሁሉንም ውሂብ ይሰርዛል።"</string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"ይህ ከእርስዎ ጡባዊ "<b>"ውስጣዊ ማከማቻ"</b>" የሚከተሉትን ጨምሮ:\n\n"<li>"የእርስዎ  /e/ መለያ"</li>\n<li>"ሥርዓት እና መተግበሪያ ውሂብ እና ቅንብሮች"</li>\n<li>"የወረዱ መተግበሪያዎች"</li>" ላይ ያሉ ሁሉንም ውሂብ ይሰርዛል።"</string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n" እርስዎ በአሁን ጊዜ የሚከተለው መለያዎች ውስጥ ገብተዋል፡\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"በዚህ መሣሪያ ላይ ያሉ ሌሎች ተጠቃሚዎች አሉ።\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"ሙዚቃ"</li>\n<li>"ፎቶዎች"</li>\n<li>"ሌላ የተጠቃሚ ውሂብ"</li></string>
@@ -1433,7 +1433,7 @@
     <string name="location_scanning_bluetooth_always_scanning_title" msgid="5444989508204520019">"የBluetooth ቅኝት"</string>
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="8602726521250591852">"የስርስዓት መተግበሪያዎች እና አገልግሎቶች በማንኛውም ሰዓት የብሉቱዝ መሳሪያዎችን እንዲያገኙ በመፍቀድ አካባቢን ያሻሽሉ።"</string>
     <string name="location_network_based" msgid="9134175479520582215">"የWi-Fi እና የተንቀሳቃሽ ስልክ አውታረ መረብ አካባቢ"</string>
-    <string name="location_neighborhood_level" msgid="5141318121229984788">"መተግበሪያዎች አካባቢዎትን በበለጠ ፍጥነት እንዲገምቱ የGoogle የአካባቢ አገልግሎትን ይጠቀሙ። ስም አልባ የአካባቢ ውሂብ ተሰብስቦ ወደ Google ይላካል።"</string>
+    <string name="location_neighborhood_level" msgid="5141318121229984788">"መተግበሪያዎች አካባቢዎትን በበለጠ ፍጥነት እንዲገምቱ የ/e/ የአካባቢ አገልግሎትን ይጠቀሙ። ስም አልባ የአካባቢ ውሂብ ተሰብስቦ ወደ /e/ ይላካል።"</string>
     <string name="location_neighborhood_level_wifi" msgid="4234820941954812210">"አካባቢ በWi-Fi ይታወቃል"</string>
     <string name="location_gps" msgid="8392461023569708478">"የGPS ሳተላይቶች"</string>
     <string name="location_street_level" product="tablet" msgid="1669562198260860802">"መተግበሪያዎች አካባቢዎትን ለይተው እንዲያስቀምጡ ጡባዊ ቱኮዎ ላይ ያለውን GPS ይጠቀሙ"</string>
@@ -1441,8 +1441,8 @@
     <string name="assisted_gps" msgid="4649317129586736885">"አጋዥ GPS ተጠቀም"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"GPSን ለማገዝአገልጋይ ተጠቀም(የአውታረ መረብ አጠቃቀምን ለመቀነስ አታመልክት)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"GPSን ለማገዝአገልጋይ ተጠቀም(የGPSንብቃት ለማሻሻል አታመልክት)"</string>
-    <string name="use_location_title" msgid="5206937465504979977">"ስፍራ &amp; የGoogle ፍለጋ"</string>
-    <string name="use_location_summary" msgid="3978805802386162520">"Google የፍለጋ ውጤቶችን እና ሌላ አገልግሎቶችን ለማሻሻል የእርስዎን ስፍራ ይጠቀሙ።"</string>
+    <string name="use_location_title" msgid="5206937465504979977">"ስፍራ &amp; የ/e/ ፍለጋ"</string>
+    <string name="use_location_summary" msgid="3978805802386162520">"/e/ የፍለጋ ውጤቶችን እና ሌላ አገልግሎቶችን ለማሻሻል የእርስዎን ስፍራ ይጠቀሙ።"</string>
     <string name="location_access_title" msgid="7064108942964081243">"ወደ አካባቢዬ መዳረሻ"</string>
     <string name="location_access_summary" msgid="69031404093194341">"የእርስዎን ፍቃድ የጠየቁ መተግበሪያዎች የአካባቢ መረጃዎትን ይጠቀሙ ዘንድ ይፍቀዱ"</string>
     <string name="location_sources_heading" msgid="1278732419851088319">"የአካባቢ ምንጮች"</string>
@@ -2238,7 +2238,7 @@
     <string name="backup_section_title" msgid="7952232291452882740">"ምትኬ &amp; እነበረበት መልስ"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"የግል ውሂብ"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"ውሂቤን መጠባበቂያ"</string>
-    <string name="backup_data_summary" msgid="708773323451655666">"የመተግበሪያ ውሂብ፣ የWi-Fi ይለፍ ቃላት እና ሌሎች ቅንብሮች በGoogle አገልጋዮች ላይ መጠባበቂያ ያስቀምጡላቸው"</string>
+    <string name="backup_data_summary" msgid="708773323451655666">"የመተግበሪያ ውሂብ፣ የWi-Fi ይለፍ ቃላት እና ሌሎች ቅንብሮች በ/e/ አገልጋዮች ላይ መጠባበቂያ ያስቀምጡላቸው"</string>
     <string name="backup_configure_account_title" msgid="3790872965773196615">"መለያ መጠባበቂያ"</string>
     <string name="include_app_data_title" msgid="2829970132260278394">"የመተግበሪያ ውሂብ አካትት"</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"ራስ ሰር ነበረበት መልስ"</string>
@@ -2246,7 +2246,7 @@
     <string name="backup_inactive_title" msgid="685838037986644604">"የምትኬ አገልግሎት ገቢር አይደለም"</string>
     <string name="backup_configure_account_default_summary" msgid="2436933224764745553">"በአሁኑ ጊዜ ምንም መለያ ተተኪ አኑር ውሂብ እያከማቸ አይደለም።"</string>
     <string name="backup_erase_dialog_title" msgid="1027640829482174106"></string>
-    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"የWi-Fi ይለፍ ቃላትዎን፣ ዕልባቶችዎን፣ ሌሎች ቅንብሮችዎን፣ እና የመተግበሪያ ውሂብዎን መጠባበቂያ መስራት ይቆም፣ እና እንዲሁም በGoogle አገልጋዮች ላይ ያሉ ቅጂዎችም ይሰረዙ?"</string>
+    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"የWi-Fi ይለፍ ቃላትዎን፣ ዕልባቶችዎን፣ ሌሎች ቅንብሮችዎን፣ እና የመተግበሪያ ውሂብዎን መጠባበቂያ መስራት ይቆም፣ እና እንዲሁም በ/e/ አገልጋዮች ላይ ያሉ ቅጂዎችም ይሰረዙ?"</string>
     <string name="fullbackup_erase_dialog_message" msgid="694766389396659626">"የመሣሪያ ውሂብ (እንደ የWi-Fi ይለፍ ቃሎች እና የጥሪ ታሪክ ያሉ) እና የመተግበሪያ ውሂብ (እንደ በመተግበሪያዎች የተከማቹ ቅንብሮች እና ፋይሎች ያሉ) ምትኬ ማስቀመጥ ቆሞ በርቀት አገልጋዮች ላይ ያሉ ሁሉም ቅጂዎች ይደምሰሱ?"</string>
     <string name="fullbackup_data_summary" msgid="960850365007767734">"በራስ-ሰር የመሣሪያ ውሂብ (እንደ Wi-Fi የይለፍ ቃሎች እና የጥሪ ታሪክ የመሳሰሉ) እና የመተግበሪያ ውሂብ (እንደ በመተግበሪያዎች የተቀመጡ ቅንብሮች እና ፋይሎች) በርቀት በምትኬ ያስቀምጡ።\n\nራስ-ሰር በምትኬ ማስቀመጥን ሲያበሩ፣ የመሣሪያ እና የመተግበሪያ ውሂብ በተወሰነ ክፍለ ጊዜ በርቀት ይቀመጣሉ። የመተግበሪያ ውሂብ (በገንቢ ቅንብሮች ላይ የሚመረኮዝ ሆኖ)፣ እንደ እውቂያዎች፣ መልዕክቶች፣ እና ፎቶዎች የመሳሰሉ አደጋ ሊያስክትሉ የሚችሉ ውሂብን ጨምሮ ማናቸውም መተግበሪያ ያስቀመጠው ውሂብ ሊሆን ይችላል።"</string>
     <string name="device_admin_settings_title" msgid="4960761799560705902">"የመሣሪያ አስተዳዳሪ ቅንብሮች"</string>
@@ -2333,7 +2333,7 @@
     <string name="sync_gmail" msgid="714886122098006477">"Gmail"</string>
     <string name="sync_calendar" msgid="9056527206714733735">"የቀን መቁጠሪያ"</string>
     <string name="sync_contacts" msgid="9174914394377828043">"እውቅያዎች"</string>
-    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">" ወደ Google አመሳስል እንኳን ደህና መጡ!"</font>\n" ውሂብ ለማመሳሰል የእርስዎን ዕውቂያዎች፣ ቀጠሮዎች እና ሌሎችም ካሉበት ለመድረስ እንዲሁም ለመፍቀድ የGoogle አቀራረብ።"</string>
+    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">" ወደ /e/ አመሳስል እንኳን ደህና መጡ!"</font>\n" ውሂብ ለማመሳሰል የእርስዎን ዕውቂያዎች፣ ቀጠሮዎች እና ሌሎችም ካሉበት ለመድረስ እንዲሁም ለመፍቀድ የ/e/ አቀራረብ።"</string>
     <string name="header_application_sync_settings" msgid="6205903695598000286">"የመተግበሪያ ማመሳሰያ ቅንብሮች"</string>
     <string name="header_data_and_synchronization" msgid="5165024023936509896">"ውሂብ &amp; ማስመር"</string>
     <string name="preference_change_password_title" msgid="8955581790270130056">"የይለፍ ቃል ቀይር"</string>
@@ -2422,8 +2422,8 @@
     <string name="data_usage_app_restrict_dialog" msgid="1466689968707308512">"ይሄ ባህሪ የተንቀሳቃሽ ስልክ አውታረ መረቦች ብቻ የሚገኙ ከሆኑ በጀርባ ውሂብ ላይ የሚወሰኑ መተግበሪያዎች ስራቸውን እንዲያቆሙ ሊያደርግ ይችላል።\n\nበመተግበሪያው ቅንብሮች ውስጥ ተገቢ የሆኑ ተጨማሪ የአጠቃቀም መቆጣጠሪያዎችን ሊያገኙ ይችላሉ።"</string>
     <string name="data_usage_restrict_denied_dialog" msgid="55012417305745608">"የተንቀሳቃሽ ስልክ ውሂብ ገደብ ሲያዘጋጁ ብቻ ነው የጀርባ ውሂብ መገደብ የሚቻለው።"</string>
     <string name="data_usage_auto_sync_on_dialog_title" msgid="2438617846762244389">"ውሂብ ራስ-አመሳስል ይብራ?"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"ድር ላይ በመለያዎችዎ ላይ የሚያደርጓቸው ማንኛቸውም ለውጦች በራስ-ሰር ወደ ጡባዊዎ ይቀዳሉ።\n\nአንዳንድ መለያዎች እንዲሁም በጡባዊ ላይ የሚያደርጓቸውን ማንኛቸውም ለውጦች ወደ ድሩ ሊቀዱት ይችላሉ። የGoogle መለያ በዚህ መንገድ ነው የሚሰራው።"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"ድር ላይ በመለያዎችዎ ላይ የሚያደርጓቸው ማንኛቸውም ለውጦች በራስ-ሰር ወደ ስልክዎ ይቀዳሉ።\n\nአንዳንድ መለያዎች እንዲሁም በስልክ ላይ የሚያደርጓቸውን ማንኛቸውም ለውጦች ወደ ድሩ ሊቀዱት ይችላሉ። የGoogle መለያ በዚህ መንገድ ነው የሚሰራው።"</string>
+    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"ድር ላይ በመለያዎችዎ ላይ የሚያደርጓቸው ማንኛቸውም ለውጦች በራስ-ሰር ወደ ጡባዊዎ ይቀዳሉ።\n\nአንዳንድ መለያዎች እንዲሁም በጡባዊ ላይ የሚያደርጓቸውን ማንኛቸውም ለውጦች ወደ ድሩ ሊቀዱት ይችላሉ። የ/e/ መለያ በዚህ መንገድ ነው የሚሰራው።"</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"ድር ላይ በመለያዎችዎ ላይ የሚያደርጓቸው ማንኛቸውም ለውጦች በራስ-ሰር ወደ ስልክዎ ይቀዳሉ።\n\nአንዳንድ መለያዎች እንዲሁም በስልክ ላይ የሚያደርጓቸውን ማንኛቸውም ለውጦች ወደ ድሩ ሊቀዱት ይችላሉ። የ/e/ መለያ በዚህ መንገድ ነው የሚሰራው።"</string>
     <string name="data_usage_auto_sync_off_dialog_title" msgid="9013139130490125793">"ውሂብ ራስ-አመሳስል ይጥፋ?"</string>
     <string name="data_usage_auto_sync_off_dialog" msgid="4025938250775413864">"ይሄ የውሂብ እና የባትሪ አጠቃቀም ይቆጥባል፣ ግን የቅርብ ጊዜ መረጃ ለመሰብሰብ እያንዳንዱ መለያ እየመረጡ  ማመሳሰል ይኖርብዎታል። እናም ዝማኔዎች ሲኖሩ ምንም ማሳወቂያዎች አይደርስዎትም።"</string>
     <string name="data_usage_cycle_editor_title" msgid="1373797281540188533">"የአጠቃቀም ዑደት ቀን ዳግም ያስጀምራል"</string>
@@ -3705,7 +3705,7 @@
     <string name="webview_disabled_for_user" msgid="1216426047631256825">"(ለተጠቃሚ <xliff:g id="USER">%s</xliff:g> ተሰናክሏል)"</string>
     <string name="autofill_app" msgid="7338387238377914374">"የራስ-ሙላ አገልግሎት"</string>
     <string name="autofill_keywords" msgid="7485591824120812710">"ራስ-ሰር፣ ሙላ፣ ራስ-ሙላ"</string>
-    <string name="autofill_confirmation_message" msgid="2784869528908005194">"&lt;b&gt;ይህን መተግበሪያ የሚያምኑት መሆንዎን ያረጋግጡ&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=Google ራስ-ሙላ&gt;%1$s&lt;/xliff:g&gt; ምን በራስ መሞላት እንደሚችል ለማወቅ በማያ ገጽዎ ላይ ያለውን ነገር ይጠቀማል።"</string>
+    <string name="autofill_confirmation_message" msgid="2784869528908005194">"&lt;b&gt;ይህን መተግበሪያ የሚያምኑት መሆንዎን ያረጋግጡ&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=/e/ ራስ-ሙላ&gt;%1$s&lt;/xliff:g&gt; ምን በራስ መሞላት እንደሚችል ለማወቅ በማያ ገጽዎ ላይ ያለውን ነገር ይጠቀማል።"</string>
     <string name="device_theme" msgid="4571803018917608588">"የመሣሪያ ገጽታ"</string>
     <string name="default_theme" msgid="7085644992078579076">"ነባሪ"</string>
     <string name="storage_manager_indicator" msgid="1516810749625915020">"የማከማቻ አስተዳዳሪ፦ <xliff:g id="STATUS">^1</xliff:g>"</string>
