--- a/res/values-bn/strings.xml
+++ b/res/values-bn/strings.xml
@@ -445,11 +445,11 @@
     <string name="crypt_keeper_warn_wipe" msgid="2738374897337991667">"সতর্কতা: আনলক করার আরো <xliff:g id="COUNT">^1</xliff:g>টি ব্যর্থ প্রচেষ্টার পর আপনার ডিভাইস সাফ করে ফেলা হবে।"</string>
     <string name="crypt_keeper_enter_password" msgid="2223340178473871064">"আপনার পাসওয়ার্ড টাইপ করুন"</string>
     <string name="crypt_keeper_failed_title" msgid="7133499413023075961">"এনক্রিপশান অসফল"</string>
-    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"এনক্রিপশান বিঘ্নিত হয়েছে এবং সম্পূর্ণ হয়নি। ফলস্বরুপ, আপনার ট্যাবলেটে আর ডেটা ব্যবহার করা যাবে না। \n\nআপনার ট্যাবলেট ব্যবহার করে পুনরায় শুরু করতে, আপনাকে ফ্যাক্টরি রিসেট করতে হবে। আবার সেট করার পর আপনি যখন আপনার ট্যাবলেট সেট আপ করবেন তখন আপনার Google অ্যাকাউন্টে ব্যাকআপ করা যে কোনো ডেটা পুনরুদ্ধার করার সুযোগ পাবেন।"</string>
-    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"এনক্রিপশান বিঘ্নিত হয়েছে এবং সম্পূর্ণ হয়নি। ফলস্বরুপ, আপনার ফোনে  আর ডেটা ব্যবহার করা যাবে না। \n\nআপনার ফোন ব্যবহার করে পুনরায় শুরু করতে, আপনাকে ফ্যাক্টরি রিসেট করতে হবে। আবার সেট করার পর আপনি যখন আপনার ফোন সেট আপ করবেন তখন আপনার Google অ্যাকাউন্টে ব্যাকআপ করা যে কোনো ডেটা পুনরুদ্ধার করার সুযোগ পাবেন।"</string>
+    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"এনক্রিপশান বিঘ্নিত হয়েছে এবং সম্পূর্ণ হয়নি। ফলস্বরুপ, আপনার ট্যাবলেটে আর ডেটা ব্যবহার করা যাবে না। \n\nআপনার ট্যাবলেট ব্যবহার করে পুনরায় শুরু করতে, আপনাকে ফ্যাক্টরি রিসেট করতে হবে। আবার সেট করার পর আপনি যখন আপনার ট্যাবলেট সেট আপ করবেন তখন আপনার /e/ অ্যাকাউন্টে ব্যাকআপ করা যে কোনো ডেটা পুনরুদ্ধার করার সুযোগ পাবেন।"</string>
+    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"এনক্রিপশান বিঘ্নিত হয়েছে এবং সম্পূর্ণ হয়নি। ফলস্বরুপ, আপনার ফোনে  আর ডেটা ব্যবহার করা যাবে না। \n\nআপনার ফোন ব্যবহার করে পুনরায় শুরু করতে, আপনাকে ফ্যাক্টরি রিসেট করতে হবে। আবার সেট করার পর আপনি যখন আপনার ফোন সেট আপ করবেন তখন আপনার /e/ অ্যাকাউন্টে ব্যাকআপ করা যে কোনো ডেটা পুনরুদ্ধার করার সুযোগ পাবেন।"</string>
     <string name="crypt_keeper_data_corrupt_title" msgid="8759119849089795751">"ডিক্রিপশন সফল হয়নি"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"আপনি যে পাসওয়ার্ডটি লিখেছেন সেটি ঠিক আছে, কিন্তু দুর্ভাগ্যবশত আপনার ডেটা বিকৃত হয়েছে। \n\nআবার আপনার ট্যাবলেট ব্যবহার করা আবার শুরু করতে, আপনাকে ফ্যাক্টরি রিসেট করতে হবে। আবার সেট করার পর আপনি যখন আপনার ফোন সেট আপ করবেন তখন আপনার Google অ্যাকাউন্টে ব্যাকআপ করা যে কোনো ডেটা পুনরুদ্ধার করার সুযোগ পাবেন।"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"আপনি যে পাসওয়ার্ডটি লিখেছেন সেটি ঠিক আছে, কিন্তু দুর্ভাগ্যবশত আপনার ডেটা বিকৃত হয়েছে। \n\nআবার আপনার ফোন ব্যবহার করা আবার শুরু করতে, আপনাকে ফ্যাক্টরি রিসেট করতে হবে। আবার সেট করার পর আপনি যখন আপনার ফোন সেট আপ করবেন তখন আপনার Google অ্যাকাউন্টে ব্যাকআপ করা যে কোনো ডেটা পুনরুদ্ধার করার সুযোগ পাবেন।"</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"আপনি যে পাসওয়ার্ডটি লিখেছেন সেটি ঠিক আছে, কিন্তু দুর্ভাগ্যবশত আপনার ডেটা বিকৃত হয়েছে। \n\nআবার আপনার ট্যাবলেট ব্যবহার করা আবার শুরু করতে, আপনাকে ফ্যাক্টরি রিসেট করতে হবে। আবার সেট করার পর আপনি যখন আপনার ফোন সেট আপ করবেন তখন আপনার /e/ অ্যাকাউন্টে ব্যাকআপ করা যে কোনো ডেটা পুনরুদ্ধার করার সুযোগ পাবেন।"</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"আপনি যে পাসওয়ার্ডটি লিখেছেন সেটি ঠিক আছে, কিন্তু দুর্ভাগ্যবশত আপনার ডেটা বিকৃত হয়েছে। \n\nআবার আপনার ফোন ব্যবহার করা আবার শুরু করতে, আপনাকে ফ্যাক্টরি রিসেট করতে হবে। আবার সেট করার পর আপনি যখন আপনার ফোন সেট আপ করবেন তখন আপনার /e/ অ্যাকাউন্টে ব্যাকআপ করা যে কোনো ডেটা পুনরুদ্ধার করার সুযোগ পাবেন।"</string>
     <string name="crypt_keeper_switch_input_method" msgid="4168332125223483198">"ইনপুট পদ্ধতি পরিবর্তন করুন"</string>
     <string name="suggested_lock_settings_title" msgid="8971630898700461034">"স্ক্রিন লক সেট করুন"</string>
     <string name="suggested_lock_settings_summary" msgid="8778462376012231110">"আপনার ডিভাইস সুরক্ষিত করুন"</string>
@@ -1347,8 +1347,8 @@
     <string name="network_reset_not_available" msgid="7188610385577164676">"এই ব্যবহারকারীদের জন্য নেটওয়ার্ক আবার সেট করুন উপলব্ধ নয়"</string>
     <string name="reset_network_complete_toast" msgid="787829973559541880">"নেটওয়ার্ক সেটিংস আবার সেট করা হয়েছে"</string>
     <string name="master_clear_title" msgid="3531267871084279512">"সমস্ত ডেটা মুছুন (ফ্যাক্টরি রিসেট)"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"এটি আপনার ট্যাবলেটের "<b>"ইন্টারনাল স্টোরেজ"</b>", থেকে সমস্ত ডেটা মুছে দেবে, এগুলি সহ:\n\n"<li>"আপনার Google অ্যাকাউন্ট"</li>\n<li>"সিস্টেম এবং অ্যাপ্লিকেশন ডেটা এবং সেটিংস"</li>\n<li>"ডাউনলোড করা অ্যাপ্লিকেশনগুলি"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"এটি আপনার ফোনের "<b>"ইন্টারনাল স্টোরেজ"</b>", থেকে সমস্ত ডেটা মুছে দেবে, এগুলি সহ:\n\n"<li>"আপনার Google অ্যাকাউন্ট"</li>\n<li>"সিস্টেম এবং অ্যাপ্লিকেশন ডেটা এবং সেটিংস"</li>\n<li>"ডাউনলোড করা অ্যাপ্লিকেশনগুলি"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"এটি আপনার ট্যাবলেটের "<b>"ইন্টারনাল স্টোরেজ"</b>", থেকে সমস্ত ডেটা মুছে দেবে, এগুলি সহ:\n\n"<li>"আপনার /e/ অ্যাকাউন্ট"</li>\n<li>"সিস্টেম এবং অ্যাপ্লিকেশন ডেটা এবং সেটিংস"</li>\n<li>"ডাউনলোড করা অ্যাপ্লিকেশনগুলি"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"এটি আপনার ফোনের "<b>"ইন্টারনাল স্টোরেজ"</b>", থেকে সমস্ত ডেটা মুছে দেবে, এগুলি সহ:\n\n"<li>"আপনার /e/ অ্যাকাউন্ট"</li>\n<li>"সিস্টেম এবং অ্যাপ্লিকেশন ডেটা এবং সেটিংস"</li>\n<li>"ডাউনলোড করা অ্যাপ্লিকেশনগুলি"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"আপনি বর্তমানে নিম্নলিখিত অ্যাকাউন্টে প্রবেশ করে আছেন:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"এই ডিভাইসে অন্যান্য ব্যবহারকারীরাও রয়েছেন৷\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"সঙ্গীত"</li>\n<li>"ফটো"</li>\n<li>"অন্যান্য ব্যবহারকারী ডেটা"</li></string>
@@ -1433,7 +1433,7 @@
     <string name="location_scanning_bluetooth_always_scanning_title" msgid="5444989508204520019">"ব্লুটুথ স্ক্যানিং"</string>
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="8602726521250591852">"যে কোনো সময়ে ব্লুটুথ ডিভাইসগুলিকে শনাক্ত করার জন্য সিস্টেম অ্যাপ্লিকেশান এবং পরিষেবাগুলিকে অনুমতি দিয়ে লোকেশন উন্নত করুন।"</string>
     <string name="location_network_based" msgid="9134175479520582215">"ওয়াই-ফাই ও মোবাইল নেটওয়ার্ক লোকেশন"</string>
-    <string name="location_neighborhood_level" msgid="5141318121229984788">"দ্রুত আপনার লোকেশন নির্ধারণ করতে অ্যাপগুলিকে Google লোকেশন পরিষেবা ব্যবহার করতে দিন। বেনামী লোকেশন ডেটা সংগ্রহ করা হবে এবং Google এ পাঠানো হবে।"</string>
+    <string name="location_neighborhood_level" msgid="5141318121229984788">"দ্রুত আপনার লোকেশন নির্ধারণ করতে অ্যাপগুলিকে /e/ লোকেশন পরিষেবা ব্যবহার করতে দিন। বেনামী লোকেশন ডেটা সংগ্রহ করা হবে এবং /e/ এ পাঠানো হবে।"</string>
     <string name="location_neighborhood_level_wifi" msgid="4234820941954812210">"ওয়াই-ফাই দ্বারা লোকেশন নির্ণয় করা হয়েছে"</string>
     <string name="location_gps" msgid="8392461023569708478">"GPS উপগ্রহ"</string>
     <string name="location_street_level" product="tablet" msgid="1669562198260860802">"আপনার লোকেশন উৎস সন্ধান করতে আপনার ট্যাবলেটের অ্যাপ্লিকেশানগুলিকে GPS ব্যবহার করতে দিন"</string>
@@ -1441,8 +1441,8 @@
     <string name="assisted_gps" msgid="4649317129586736885">"সহায়কযুক্ত GPS ব্যবহার করুন"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"GPS সহায়তার জন্য সার্ভার ব্যবহার করুন (নেটওয়ার্ক ব্যবহার কমাতে টিক চিহ্নটি তুলে দিন)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"GPS সহায়তার জন্য সার্ভার ব্যবহার করুন (GPS কর্মক্ষমতার উন্নতি করতে টিক চিহ্নটি তুলে দিন)"</string>
-    <string name="use_location_title" msgid="5206937465504979977">"লোকেশন ও Google সার্চ"</string>
-    <string name="use_location_summary" msgid="3978805802386162520">"সার্চ ফলাফল এবং অন্যান্য পরিষেবাগুলি উন্নত করার জন্য Google কে আপনার লোকেশন ব্যবহার করতে দিন"</string>
+    <string name="use_location_title" msgid="5206937465504979977">"লোকেশন ও /e/ সার্চ"</string>
+    <string name="use_location_summary" msgid="3978805802386162520">"সার্চ ফলাফল এবং অন্যান্য পরিষেবাগুলি উন্নত করার জন্য /e/ কে আপনার লোকেশন ব্যবহার করতে দিন"</string>
     <string name="location_access_title" msgid="7064108942964081243">"আমার অবস্থানে অ্যাক্সেস"</string>
     <string name="location_access_summary" msgid="69031404093194341">"যে অ্যাপ্লিকেশানগুলি আপনার লোকেশন তথ্য ব্যবহার করার অনুমতি চেয়েছে তাদেরকে অনুমতি দিন"</string>
     <string name="location_sources_heading" msgid="1278732419851088319">"লোকেশন উৎসগুলি"</string>
@@ -2238,7 +2238,7 @@
     <string name="backup_section_title" msgid="7952232291452882740">"ব্যাকআপ ও পুনরুদ্ধার"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"ব্যক্তিগত ডেটা"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"আমার তথ্য ব্যাকআপ করুন"</string>
-    <string name="backup_data_summary" msgid="708773323451655666">"অ্যাপ্লিকেশান ডেটা,  ওয়াই-ফাই পাসওয়ার্ড, এবং অন্যান্য সেটিংস Google সার্ভারে ব্যাকআপ নিন"</string>
+    <string name="backup_data_summary" msgid="708773323451655666">"অ্যাপ্লিকেশান ডেটা,  ওয়াই-ফাই পাসওয়ার্ড, এবং অন্যান্য সেটিংস /e/ সার্ভারে ব্যাকআপ নিন"</string>
     <string name="backup_configure_account_title" msgid="3790872965773196615">"ব্যাকআপ অ্যাকাউন্ট"</string>
     <string name="include_app_data_title" msgid="2829970132260278394">"অ্যাপ্লিকেশান ডেটা অন্তর্ভুক্ত করুন"</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"অটোমেটিক রিস্টোর"</string>
@@ -2246,7 +2246,7 @@
     <string name="backup_inactive_title" msgid="685838037986644604">"ব্যাকঅ্যাপ সার্ভিস সক্রিয় নয়"</string>
     <string name="backup_configure_account_default_summary" msgid="2436933224764745553">"কোনও অ্যাকাউন্ট বর্তমানে ব্যাক-আপ ডেটা মজুত রাখছে না"</string>
     <string name="backup_erase_dialog_title" msgid="1027640829482174106"></string>
-    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"আপনার ওয়াই-ফাই পাসওয়ার্ড, বুকমার্ক, অন্যান্য সেটিংস এবং অ্যাপ ডেটা ব্যাক-আপ করা বন্ধ করুন, এছাড়াও Google সার্ভারগুলিতে সব কপি মুছে ফেলতে চান?"</string>
+    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"আপনার ওয়াই-ফাই পাসওয়ার্ড, বুকমার্ক, অন্যান্য সেটিংস এবং অ্যাপ ডেটা ব্যাক-আপ করা বন্ধ করুন, এছাড়াও /e/ সার্ভারগুলিতে সব কপি মুছে ফেলতে চান?"</string>
     <string name="fullbackup_erase_dialog_message" msgid="694766389396659626">"ডিভাইস ডেটা (যেমন ওয়াই-ফাই এর পাসওয়ার্ড এবং কলের ইতিহাস) এবং অ্যাপ্লিকেশন ডেটা (যেমন অ্যাপ্লিকেশনগুলির দ্বারা সেভ করা সেটিংস এবং ফাইলগুলি) এর ব্যাক-আপ নেওয়া বন্ধ করবেন, তার সাথে দূরবর্তী সার্ভারে সমস্ত কপি মুছবেন?"</string>
     <string name="fullbackup_data_summary" msgid="960850365007767734">"দূরবর্তীভাবে ডিভাইস ডেটার (যেমন, ওয়াই-ফাই এর পাসওয়ার্ডগুলি এবং কলের ইতিহাস) এবং অ্যাপ্লিকেশন ডেটার (যেমন অ্যাপ্লিকেশনগুলির দ্বারা সঞ্চিত সেটিংস এবং ফাইলগুলি)অটোমেটিক ব্যাকআপ নেওয়া হয়৷\n\nআপনি যখন অটোমেটিক ব্যাকআপ চালু করেন তখন দূরবর্তীভাবে ডিভাইস এবং অ্যাপ্লিকেশনের ডেটা পর্যায়ক্রমে সংরক্ষিত হয়৷ অ্যাপ্লিকেশন ডেটা যেকোনও ডেটা হতে পারে যা অ্যাপ্লিকেশন সংরক্ষণ করে (ডেভেলপারের সেটিংস এর উপর ভিত্তি করে), পরিচিতি, মেসেজ এবং ফটোগুলির মতো সম্ভাব্য সংবেদনশীল ডেটা অন্তর্ভুক্ত করে৷"</string>
     <string name="device_admin_settings_title" msgid="4960761799560705902">"ডিভাইসের প্রশাসকের সেটিংস"</string>
@@ -2333,7 +2333,7 @@
     <string name="sync_gmail" msgid="714886122098006477">"Gmail"</string>
     <string name="sync_calendar" msgid="9056527206714733735">"ক্যালেন্ডার"</string>
     <string name="sync_contacts" msgid="9174914394377828043">"পরিচিতিগুলি"</string>
-    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Google সমন্বয়ে স্বাগতম!"</font>" \nআপনি যেখানেই থাকুন না কেন আপনার পরিচিতি, অ্যাপয়েন্টমেন্ট, এবং আরো অনেক কিছু অ্যাক্সেস করার জন্য ডেটা সিঙ্ক করতে একটি Google এর একটি পদক্ষেপ।"</string>
+    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"/e/ সমন্বয়ে স্বাগতম!"</font>" \nআপনি যেখানেই থাকুন না কেন আপনার পরিচিতি, অ্যাপয়েন্টমেন্ট, এবং আরো অনেক কিছু অ্যাক্সেস করার জন্য ডেটা সিঙ্ক করতে একটি /e/ এর একটি পদক্ষেপ।"</string>
     <string name="header_application_sync_settings" msgid="6205903695598000286">"অ্যাপ্লিকেশান সমন্বয় সেটিংস"</string>
     <string name="header_data_and_synchronization" msgid="5165024023936509896">"ডেটা ও সমন্বয়"</string>
     <string name="preference_change_password_title" msgid="8955581790270130056">"পাসওয়ার্ড পরিবর্তন করুন"</string>
@@ -2422,8 +2422,8 @@
     <string name="data_usage_app_restrict_dialog" msgid="1466689968707308512">"এই বৈশিষ্ট্যটি যখন শুধুমাত্র মোবাইল নেটওয়ার্ক উপলব্ধ তখন কাজ বন্ধ করার জন্য পশ্চাদপট ডেটার উপর নির্ভরশীল হয় এমন অ্যাপ্লিকেশানের উপর প্রভাব ফেলতে পারে।\n\nআপনি অ্যাপ্লিকেশন মধ্যে উপলব্ধ সেটিংসে আরো উপযুক্ত ডেটা ব্যবহার নিয়ন্ত্রণ সম্পর্কে জানতে পারবেন।"</string>
     <string name="data_usage_restrict_denied_dialog" msgid="55012417305745608">"মোবাইল ডেটার সীমা সেট করলে একমাত্র তখনই পটভূমির ডেটা সীমাবদ্ধ করা সম্ভব।"</string>
     <string name="data_usage_auto_sync_on_dialog_title" msgid="2438617846762244389">"ডেটা অটোমেটিক সিঙ্ক চালু করবেন?"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"ওয়েবে আপনার অ্যাকাউন্টে আপনি যে পরিবর্তন করবেন সেটি অটোমেটিক আপনার ট্যাবলেটে কপি করা হবে।\n\nকোনও কোনও অ্যাকাউন্ট আপনার ট্যাবলেটে করা পরিবর্তনগুলি অটোমেটিক ওয়েবে কপি করতে পারবে। Google অ্যাকাউন্ট এভাবেই কাজ করে।"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"ওয়েবে আপনার অ্যাকাউন্টে আপনি যে পরিবর্তন করবেন সেটি অটোমেটিক আপনার ফোনে কপি করা হবে।\n\nকোনও কোনও অ্যাকাউন্ট আপনার ফোনে করা পরিবর্তনগুলি অটোমেটিক ওয়েবে কপি করতে পারবে। Google অ্যাকাউন্ট এভাবেই কাজ করে।"</string>
+    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"ওয়েবে আপনার অ্যাকাউন্টে আপনি যে পরিবর্তন করবেন সেটি অটোমেটিক আপনার ট্যাবলেটে কপি করা হবে।\n\nকোনও কোনও অ্যাকাউন্ট আপনার ট্যাবলেটে করা পরিবর্তনগুলি অটোমেটিক ওয়েবে কপি করতে পারবে। /e/ অ্যাকাউন্ট এভাবেই কাজ করে।"</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"ওয়েবে আপনার অ্যাকাউন্টে আপনি যে পরিবর্তন করবেন সেটি অটোমেটিক আপনার ফোনে কপি করা হবে।\n\nকোনও কোনও অ্যাকাউন্ট আপনার ফোনে করা পরিবর্তনগুলি অটোমেটিক ওয়েবে কপি করতে পারবে। /e/ অ্যাকাউন্ট এভাবেই কাজ করে।"</string>
     <string name="data_usage_auto_sync_off_dialog_title" msgid="9013139130490125793">"ডেটা অটোমেটিক সিঙ্ক বন্ধ করবেন?"</string>
     <string name="data_usage_auto_sync_off_dialog" msgid="4025938250775413864">"এটি ডেটা এবং ব্যাটারির খরচ বাঁচাবে, কিন্তু আপনাকে সাম্প্রতিক তথ্য সংগ্রহ করতে ম্যানুয়ালি প্রতিটি অ্যাকাউন্ট সিঙ্ক করতে হবে। আপডেট হলে আপনি তখন বিজ্ঞপ্তি পাবেন না।"</string>
     <string name="data_usage_cycle_editor_title" msgid="1373797281540188533">"ব্যবহার চক্র আবার সেট করার তারিখ"</string>
@@ -3705,7 +3705,7 @@
     <string name="webview_disabled_for_user" msgid="1216426047631256825">"(ইউজার <xliff:g id="USER">%s</xliff:g> এর জন্য অক্ষম হয়েছে)"</string>
     <string name="autofill_app" msgid="7338387238377914374">"আপনাআপনি পূরণ করার পরিষেবা"</string>
     <string name="autofill_keywords" msgid="7485591824120812710">"স্বতঃ, পূরণ, স্বতঃপূরণ"</string>
-    <string name="autofill_confirmation_message" msgid="2784869528908005194">"&lt;b&gt;নিশ্চিত করুন যে এই অ্যাপটি বিশ্বাসযোগ্য&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; কোনও তথ্য নিজে থেকে পূরণ করা যাবে কি না, তা নির্ণয় করতে &lt;xliff:g id=app_name example=Google Autofill&gt;%1$s&lt;/xliff:g&gt; অ্যাপটি আপনার স্ক্রিনে যা দেখা যাচ্ছে সেই অনুযায়ী সিদ্ধান্ত নেয়।"</string>
+    <string name="autofill_confirmation_message" msgid="2784869528908005194">"&lt;b&gt;নিশ্চিত করুন যে এই অ্যাপটি বিশ্বাসযোগ্য&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; কোনও তথ্য নিজে থেকে পূরণ করা যাবে কি না, তা নির্ণয় করতে &lt;xliff:g id=app_name example=/e/ Autofill&gt;%1$s&lt;/xliff:g&gt; অ্যাপটি আপনার স্ক্রিনে যা দেখা যাচ্ছে সেই অনুযায়ী সিদ্ধান্ত নেয়।"</string>
     <string name="device_theme" msgid="4571803018917608588">"ডিভাইসের থিম"</string>
     <string name="default_theme" msgid="7085644992078579076">"ডিফল্ট"</string>
     <string name="storage_manager_indicator" msgid="1516810749625915020">"স্টোরেজ ম্যানেজার: <xliff:g id="STATUS">^1</xliff:g>"</string>
