--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -445,11 +445,11 @@
     <string name="crypt_keeper_warn_wipe" msgid="2738374897337991667">"चेतावनी: अनलॉक किए जाने के <xliff:g id="COUNT">^1</xliff:g> और विफल प्रयासों के बाद आपका डिवाइस हटा दिया जाएगा!"</string>
     <string name="crypt_keeper_enter_password" msgid="2223340178473871064">"अपना पासवर्ड लिखें"</string>
     <string name="crypt_keeper_failed_title" msgid="7133499413023075961">"सुरक्षित नहीं किया जा सका"</string>
-    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"सुरक्षित करने में रुकावट हुई और यह काम पूरा नहीं किया जा सका. इसलिए अब आपके टैबलेट के डेटा तक नहीं पहुंचा जा सकता. \n\nअपने टैबलेट का इस्तेमाल फिर से शुरू करने के लिए, आपको फ़ैक्‍ट्री रीसेट करना होगा. जब आप रीसेट करने के बाद अपना टैबलेट सेट करेंगे, तो आप अपने Google खाते पर बैकअप लिए गए किसी भी डेटा को बहाल कर सकेंगे."</string>
-    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"सुरक्षित करने में रुकावट हुई और यह काम पूरा नहीं किया जा सका. इसलिए अब आपके फ़ोन के डेटा तक नहीं पहुंचा जा सकता. \n\nअपने फ़ोन का इस्तेमाल फिर से शुरू करने के लिए, आपको फ़ैक्‍ट्री रीसेट करना होगा. जब आप रीसेट करने के बाद अपना फ़ोन सेट करेंगे, तो आप अपने Google खाते पर बैकअप लिए गए किसी भी डेटा को बहाल कर सकेंगे."</string>
+    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"सुरक्षित करने में रुकावट हुई और यह काम पूरा नहीं किया जा सका. इसलिए अब आपके टैबलेट के डेटा तक नहीं पहुंचा जा सकता. \n\nअपने टैबलेट का इस्तेमाल फिर से शुरू करने के लिए, आपको फ़ैक्‍ट्री रीसेट करना होगा. जब आप रीसेट करने के बाद अपना टैबलेट सेट करेंगे, तो आप अपने /e/ खाते पर बैकअप लिए गए किसी भी डेटा को बहाल कर सकेंगे."</string>
+    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"सुरक्षित करने में रुकावट हुई और यह काम पूरा नहीं किया जा सका. इसलिए अब आपके फ़ोन के डेटा तक नहीं पहुंचा जा सकता. \n\nअपने फ़ोन का इस्तेमाल फिर से शुरू करने के लिए, आपको फ़ैक्‍ट्री रीसेट करना होगा. जब आप रीसेट करने के बाद अपना फ़ोन सेट करेंगे, तो आप अपने /e/ खाते पर बैकअप लिए गए किसी भी डेटा को बहाल कर सकेंगे."</string>
     <string name="crypt_keeper_data_corrupt_title" msgid="8759119849089795751">"डीक्रिप्‍शन असफल"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"आपके द्वारा डाला गया पासवर्ड सही है, लेकिन दुर्भाग्‍य से आपका डेटा दूषित है. \n\nअपने टैबलेट का उपयोग फिर से शुरू करने के लिए आपको फ़ैक्टरी रीसेट करना होगा. जब आप रीसेट के बाद अपना टैबलेट रीसेट करते हैं, तो आपके पास अपने Google खाते में बैकअप लिए गए किसी भी डेटा को पुन: स्‍थापित करने का अवसर होगा."</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"आपके द्वारा डाला गया पासवर्ड सही है, लेकिन दुर्भाग्‍य से आपका डेटा दूषित है. \n\nअपने फ़ोन का उपयोग फिर से शुरू करने के लिए आपको फ़ैक्टरी रीसेट करना होगा. जब आप रीसेट के बाद अपना फ़ोन सेट करते हैं, तो आपके पास अपने Google खाते में बैकअप किए गए किसी भी डेटा को पुन: स्‍थापित करने का अवसर होगा."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"आपके द्वारा डाला गया पासवर्ड सही है, लेकिन दुर्भाग्‍य से आपका डेटा दूषित है. \n\nअपने टैबलेट का उपयोग फिर से शुरू करने के लिए आपको फ़ैक्टरी रीसेट करना होगा. जब आप रीसेट के बाद अपना टैबलेट रीसेट करते हैं, तो आपके पास अपने /e/ खाते में बैकअप लिए गए किसी भी डेटा को पुन: स्‍थापित करने का अवसर होगा."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"आपके द्वारा डाला गया पासवर्ड सही है, लेकिन दुर्भाग्‍य से आपका डेटा दूषित है. \n\nअपने फ़ोन का उपयोग फिर से शुरू करने के लिए आपको फ़ैक्टरी रीसेट करना होगा. जब आप रीसेट के बाद अपना फ़ोन सेट करते हैं, तो आपके पास अपने /e/ खाते में बैकअप किए गए किसी भी डेटा को पुन: स्‍थापित करने का अवसर होगा."</string>
     <string name="crypt_keeper_switch_input_method" msgid="4168332125223483198">"इनपुट का तरीका बदलें"</string>
     <string name="suggested_lock_settings_title" msgid="8971630898700461034">"स्‍क्रीन लॉक सेट करना"</string>
     <string name="suggested_lock_settings_summary" msgid="8778462376012231110">"अपने डिवाइस की सुरक्षा करें"</string>
@@ -1347,8 +1347,8 @@
     <string name="network_reset_not_available" msgid="7188610385577164676">"इस उपयोगकर्ता के लिए नेटवर्क रीसेट मौजूद नहीं है"</string>
     <string name="reset_network_complete_toast" msgid="787829973559541880">"नेटवर्क सेटिंग रीसेट कर दी गई हैं"</string>
     <string name="master_clear_title" msgid="3531267871084279512">"सभी डेटा मिटाएं (फ़ैक्ट्री रीसेट)"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"इससे आपके टैबलेट के "<b>"मोबाइल मेमोरी"</b>" से सभी डेटा मिट जाएगा, जिसमें शामिल है:\n\n"<li>"आपका Google खाता"</li>\n<li>"सिस्‍टम और ऐप्स डेटा और सेटिंग"</li>\n<li>"डाउनलोड किए गए ऐप्स"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"इससे आपके फ़ोन की "<b>"मेमोरी"</b>" से सभी डेटा मिट जाएगा, जिसमें शामिल है:\n\n"<li>"आपका Google खाता"</li>\n<li>"सिस्‍टम और ऐप्लिकेशन डेटा और सेटिंग"</li>\n<li>"डाउनलोड किए गए ऐप्लिकेशन"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"इससे आपके टैबलेट के "<b>"मोबाइल मेमोरी"</b>" से सभी डेटा मिट जाएगा, जिसमें शामिल है:\n\n"<li>"आपका /e/ खाता"</li>\n<li>"सिस्‍टम और ऐप्स डेटा और सेटिंग"</li>\n<li>"डाउनलोड किए गए ऐप्स"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"इससे आपके फ़ोन की "<b>"मेमोरी"</b>" से सभी डेटा मिट जाएगा, जिसमें शामिल है:\n\n"<li>"आपका /e/ खाता"</li>\n<li>"सिस्‍टम और ऐप्लिकेशन डेटा और सेटिंग"</li>\n<li>"डाउनलोड किए गए ऐप्लिकेशन"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"आप इस समय नीचे दिए गए खातों में साइन इन किए हुए हैं:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"इस डिवाइस पर अन्‍य उपयोगकर्ता मौजूद हैं.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"संगीत"</li>\n<li>"फ़ोटो"</li>\n<li>"अन्य उपयोगकर्ता डेटा"</li></string>
@@ -1433,7 +1433,7 @@
     <string name="location_scanning_bluetooth_always_scanning_title" msgid="5444989508204520019">"ब्‍लूटूथ स्‍कैन करना"</string>
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="8602726521250591852">"सिस्‍टम ऐप और सेवाओं को किसी भी समय ब्‍लूटूथ डिवाइसों का पता लगाने की अनुमति देकर जगह की बेहतर जानकारी पाएं."</string>
     <string name="location_network_based" msgid="9134175479520582215">"वाई-फ़ाई और मोबाइल नेटवर्क जगह"</string>
-    <string name="location_neighborhood_level" msgid="5141318121229984788">"आपकी जगह का तेज़ी से अनुमान लगाने के लिए, ऐप को Google की जगह की जानकारी का इस्तेमाल करने दें. अनजान जगह का डेटा इकट्ठा करके Google को भेजा जाएगा."</string>
+    <string name="location_neighborhood_level" msgid="5141318121229984788">"आपकी जगह का तेज़ी से अनुमान लगाने के लिए, ऐप को /e/ की जगह की जानकारी का इस्तेमाल करने दें. अनजान जगह का डेटा इकट्ठा करके /e/ को भेजा जाएगा."</string>
     <string name="location_neighborhood_level_wifi" msgid="4234820941954812210">"यह जगह वाई-फ़ाई ने तय की है"</string>
     <string name="location_gps" msgid="8392461023569708478">"GPS उपग्रह"</string>
     <string name="location_street_level" product="tablet" msgid="1669562198260860802">"आपकी जगह का पता लगाने के लिए, ऐप को आपके टैबलेट पर जीपीएस का इस्तेमाल करने दें"</string>
@@ -1441,8 +1441,8 @@
     <string name="assisted_gps" msgid="4649317129586736885">"सहायता प्राप्त GPS का उपयोग करें"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"GPS की सहायता के लिए सर्वर का उपयोग करें (नेटवर्क उपयोग कम करने के लिए अनचेक करें)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"GPS की सहायता के लिए सर्वर का उपयोग करें (GPS निष्‍पादन बेहतर बनाने के लिए अनचेक करें)"</string>
-    <string name="use_location_title" msgid="5206937465504979977">"जगह और Google सर्च"</string>
-    <string name="use_location_summary" msgid="3978805802386162520">"सर्च नतीजों और अन्‍य सेवाओं में सुधार के लिए Google को आपकी जगह का इस्तेमाल करने दें"</string>
+    <string name="use_location_title" msgid="5206937465504979977">"जगह और /e/ सर्च"</string>
+    <string name="use_location_summary" msgid="3978805802386162520">"सर्च नतीजों और अन्‍य सेवाओं में सुधार के लिए /e/ को आपकी जगह का इस्तेमाल करने दें"</string>
     <string name="location_access_title" msgid="7064108942964081243">"मेरी जगह को एक्सेस करें"</string>
     <string name="location_access_summary" msgid="69031404093194341">"जिन ऐप ने आपसे अनुमति मांगी है उन्हें अपने जगह की जानकारी का इस्तेमाल करने दें"</string>
     <string name="location_sources_heading" msgid="1278732419851088319">"स्‍थानीय स्रोत"</string>
@@ -2238,7 +2238,7 @@
     <string name="backup_section_title" msgid="7952232291452882740">"सुरक्षित करें और पुनर्स्‍थापित करें"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"निजी डेटा"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"मेरे डेटा का बैकअप लें"</string>
-    <string name="backup_data_summary" msgid="708773323451655666">"ऐप्स  डेटा, वाई-फ़ाई पासवर्ड, और अन्य सेटिंग को Google सर्वर पर सुरक्षित रखें"</string>
+    <string name="backup_data_summary" msgid="708773323451655666">"ऐप्स  डेटा, वाई-फ़ाई पासवर्ड, और अन्य सेटिंग को /e/ सर्वर पर सुरक्षित रखें"</string>
     <string name="backup_configure_account_title" msgid="3790872965773196615">"सुरक्षित खाता"</string>
     <string name="include_app_data_title" msgid="2829970132260278394">"ऐप्स डेटा शामिल करें"</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"अपने आप डेटा रिस्टोर करें"</string>
@@ -2246,7 +2246,7 @@
     <string name="backup_inactive_title" msgid="685838037986644604">"बैकअप सेवा सक्रिय नहीं है"</string>
     <string name="backup_configure_account_default_summary" msgid="2436933224764745553">"वर्तमान में कोई भी खाता बैकअप डेटा संग्रहित नहीं कर रहा है"</string>
     <string name="backup_erase_dialog_title" msgid="1027640829482174106"></string>
-    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"अपने वाई-फ़ाई  पासवर्ड, बुकमार्क, अन्य सेटिंग और ऐप्स डेटा को सुरक्षित रखें, साथ ही Google सर्वर से सभी प्रतियां मिटाएं?"</string>
+    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"अपने वाई-फ़ाई  पासवर्ड, बुकमार्क, अन्य सेटिंग और ऐप्स डेटा को सुरक्षित रखें, साथ ही /e/ सर्वर से सभी प्रतियां मिटाएं?"</string>
     <string name="fullbackup_erase_dialog_message" msgid="694766389396659626">"डिवाइस डेटा (जैसे वाई-फ़ाई पासवर्ड और कॉल इतिहास) और ऐप डेटा (जैसे सेटिंग और ऐप्स द्वारा संग्रहित फ़ाइलों) का बैक अप लेना बंद करें, साथ ही रिमोट सर्वर से सभी प्रतियां मिटाएं?"</string>
     <string name="fullbackup_data_summary" msgid="960850365007767734">"दूरस्थ रूप से अपने आप डिवाइस डेटा (जैसे वाई-फ़ाई पासवर्ड और कॉल इतिहास) और ऐप डेटा (जैसे ऐप्स द्वारा संग्रहित सेटिंग और फ़ाइलों) का बैक अप लें.\n\nजब आप स्वचालित बैकअप चालू करते हैं, तो डिवाइस और ऐप डेटा को दूरस्थ रूप से समय-समय पर सहेजा जाता है. ऐप डेटा कोई भी ऐसा डेटा हो सकता है जिसे किसी ऐप द्वारा सहेजा गया है (डेवलपर सेटिंग के आधार पर), जिसमें संभावित रूप से संवेदनशील डेटा जैसे संपर्क, संदेश और फ़ोटो शामिल हैं."</string>
     <string name="device_admin_settings_title" msgid="4960761799560705902">"डिवाइस व्यवस्थापक सेटिंग"</string>
@@ -2333,7 +2333,7 @@
     <string name="sync_gmail" msgid="714886122098006477">"Gmail"</string>
     <string name="sync_calendar" msgid="9056527206714733735">"कैलेंडर"</string>
     <string name="sync_contacts" msgid="9174914394377828043">"संपर्क"</string>
-    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Google sync में आपका स्वागत है!"</font>\n"आप जहां भी हों वहां से आपके संपर्क, अपॉइंटमेंट, और अन्य चीज़ों तक पहुंच की सुविधा देने के लिए डेटा को समन्‍वयित करने का Google का तरीका."</string>
+    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"/e/ sync में आपका स्वागत है!"</font>\n"आप जहां भी हों वहां से आपके संपर्क, अपॉइंटमेंट, और अन्य चीज़ों तक पहुंच की सुविधा देने के लिए डेटा को समन्‍वयित करने का /e/ का तरीका."</string>
     <string name="header_application_sync_settings" msgid="6205903695598000286">"ऐप्स समन्‍वयन सेटिंग"</string>
     <string name="header_data_and_synchronization" msgid="5165024023936509896">"डेटा और सिंक्रनाइज़ेशन"</string>
     <string name="preference_change_password_title" msgid="8955581790270130056">"पासवर्ड बदलें"</string>
@@ -2422,8 +2422,8 @@
     <string name="data_usage_app_restrict_dialog" msgid="1466689968707308512">"यह सुविधा सिर्फ़ मोबाइल नेटवर्क उपलब्ध होने पर उस एेप को काम करने से रोक सकती है जो बैकग्राउंड डेटा पर निर्भर है.\n\nआप एेप में उपलब्ध सेटिंग में ज़्यादा उचित डेटा खर्च नियंत्रण पा सकते हैं."</string>
     <string name="data_usage_restrict_denied_dialog" msgid="55012417305745608">"बैकग्राउंड डेटा प्रतिबंधित करना तभी संभव है जब आपने कोई नेटवर्क डेटा सीमा सेट की हुई हो."</string>
     <string name="data_usage_auto_sync_on_dialog_title" msgid="2438617846762244389">"अपने आप डेटा सिंक चालू करें?"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"आपने वेब पर अपने खातों में जो भी बदलाव किए हैं उनकी कॉपी आपके टैबलेट में अपने आप बन जाएगी.\n\nआपने जो भी बदलाव टैबलेट पर किए हैं, उन्हें कुछ खाते वेब पर भी कॉपी कर सकते हैं. Google खाता इसी तरह काम करता है."</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"आपने वेब पर अपने खातों में जो भी बदलाव किए हैं उनकी कॉपी आपके फ़ोन में अपने आप बन जाएगी.\n\nआपने जो भी बदलाव फ़ोन पर किए हैं, उन्हें कुछ खाते वेब पर भी कॉपी कर सकते हैं. Google खाता इसी तरह काम करता है."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"आपने वेब पर अपने खातों में जो भी बदलाव किए हैं उनकी कॉपी आपके टैबलेट में अपने आप बन जाएगी.\n\nआपने जो भी बदलाव टैबलेट पर किए हैं, उन्हें कुछ खाते वेब पर भी कॉपी कर सकते हैं. /e/ खाता इसी तरह काम करता है."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"आपने वेब पर अपने खातों में जो भी बदलाव किए हैं उनकी कॉपी आपके फ़ोन में अपने आप बन जाएगी.\n\nआपने जो भी बदलाव फ़ोन पर किए हैं, उन्हें कुछ खाते वेब पर भी कॉपी कर सकते हैं. /e/ खाता इसी तरह काम करता है."</string>
     <string name="data_usage_auto_sync_off_dialog_title" msgid="9013139130490125793">"अपने आप डेटा सिंक होना बंद करें?"</string>
     <string name="data_usage_auto_sync_off_dialog" msgid="4025938250775413864">"यह डेटा और बैटरी में बचत करेगा लेकिन हाल की जानकारी इकट्ठा करने के लिए आपको हर खाते को मैन्‍युअल रूप से सिंक करना होगा. ऐसा करने से आपको किसी भी अपडेट की जानकारी नहीं मिलेगी."</string>
     <string name="data_usage_cycle_editor_title" msgid="1373797281540188533">"उपयोग की अवधि रीसेट करने की तारीख"</string>
@@ -3705,7 +3705,7 @@
     <string name="webview_disabled_for_user" msgid="1216426047631256825">"(उपयोगकर्ता <xliff:g id="USER">%s</xliff:g> के लिए बंद है)"</string>
     <string name="autofill_app" msgid="7338387238377914374">"ऑटोमैटिक भरने की सेवा"</string>
     <string name="autofill_keywords" msgid="7485591824120812710">"ऑटो, भरना, ऑटोमैटिक भरना"</string>
-    <string name="autofill_confirmation_message" msgid="2784869528908005194">"&lt;b&gt;सुनिश्चित करें कि आप इस ऐप्लिकेशन पर भरोसा करते हैं&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=Google ऑटोमैटिक भरना&gt;%1$s&lt;/xliff:g&gt; ऑटोमैटिक भरी जा सकने वाली चीज़ें निर्धारित करने के लिए आपकी स्क्रीन पर मौजूद चीज़ों का उपयोग करता है."</string>
+    <string name="autofill_confirmation_message" msgid="2784869528908005194">"&lt;b&gt;सुनिश्चित करें कि आप इस ऐप्लिकेशन पर भरोसा करते हैं&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=/e/ ऑटोमैटिक भरना&gt;%1$s&lt;/xliff:g&gt; ऑटोमैटिक भरी जा सकने वाली चीज़ें निर्धारित करने के लिए आपकी स्क्रीन पर मौजूद चीज़ों का उपयोग करता है."</string>
     <string name="device_theme" msgid="4571803018917608588">"डिवाइस की थीम"</string>
     <string name="default_theme" msgid="7085644992078579076">"डिफ़ॉल्ट"</string>
     <string name="storage_manager_indicator" msgid="1516810749625915020">"जगह प्रबंधक: <xliff:g id="STATUS">^1</xliff:g>"</string>
