--- a/res/values-ka/strings.xml
+++ b/res/values-ka/strings.xml
@@ -445,11 +445,11 @@
     <string name="crypt_keeper_warn_wipe" msgid="2738374897337991667">"გაფრთხილება: თქვენი მოწყობილობა სრულად წაიშლება განბლოკვის კიდევ <xliff:g id="COUNT">^1</xliff:g> არასწორი მცდელობის შემდეგ!"</string>
     <string name="crypt_keeper_enter_password" msgid="2223340178473871064">"აკრიფეთ თქვენი პაროლი"</string>
     <string name="crypt_keeper_failed_title" msgid="7133499413023075961">"დაშიფვრა ვერ შესრულდა"</string>
-    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"დაშიფვრის შეწყვეტის გამო თქვენ ტაბლეტზე შენახული მონაცემები ხელმისაწვდომი აღარ არის. \n\n ტაბლეტის გამოყენების გასაგრძელებლად, მოახდინეთ მონაცემების სრული გადაყენება. ამის შემდეგ გექნებათ თქვენ Google ანგარიშზე დამარქაფებული მონაცემების აღდგენის შესაძლებლობა."</string>
-    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"დაშიფვრის შეწყვეტის გამო თქვენ ტელეფონზე შენახული მონაცემები ხელმისაწვდომი აღარ არის. \n\n ტელეფონით სარგებლობის გასაგრძელებლად, აღადგინეთ ქარხნული მონაცემები. ამის შემდეგ გექნებათ ყველა იმ მონაცემის აღდგენის საშუალება, რომელთათვისაც Google ანგარიშში შექმენით სარეზერვო ასლები."</string>
+    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"დაშიფვრის შეწყვეტის გამო თქვენ ტაბლეტზე შენახული მონაცემები ხელმისაწვდომი აღარ არის. \n\n ტაბლეტის გამოყენების გასაგრძელებლად, მოახდინეთ მონაცემების სრული გადაყენება. ამის შემდეგ გექნებათ თქვენ /e/ ანგარიშზე დამარქაფებული მონაცემების აღდგენის შესაძლებლობა."</string>
+    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"დაშიფვრის შეწყვეტის გამო თქვენ ტელეფონზე შენახული მონაცემები ხელმისაწვდომი აღარ არის. \n\n ტელეფონით სარგებლობის გასაგრძელებლად, აღადგინეთ ქარხნული მონაცემები. ამის შემდეგ გექნებათ ყველა იმ მონაცემის აღდგენის საშუალება, რომელთათვისაც /e/ ანგარიშში შექმენით სარეზერვო ასლები."</string>
     <string name="crypt_keeper_data_corrupt_title" msgid="8759119849089795751">"გაშიფვრა ვერ განხორციელდა"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"თქვენ მიერ შეყვანილი პაროლი სწორია, თუმცა, სამწუხაროდ, თქვენი მონაცემები დაზიანებულია. \n\nთქვენი ტაბლეტის გამოყენების გასაგრძელებლად ქარხნულ მონაცემებზე დაბრუნება მოგიწევთ. როდესაც ამის შემდეგ ტაბლეტს ხელახლა გამართავთ, გექნებათ საშუალება, აღადგინოთ თქვენს Google ანგარიშში დამარქაფებული ყველა მონაცემი."</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"თქვენ მიერ შეყვანილი პაროლი სწორია, თუმცა, სამწუხაროდ, თქვენი მონაცემები დაზიანებულია. \n\nტელეფონის გამოყენების გასაგრძელებლად ქარხნულ მონაცემებზე დაბრუნება მოგიწევთ. როდესაც ამის შემდეგ ტელეფონს ხელახლა გამართავთ, გექნებათ საშუალება, აღადგინოთ თქვვენს Google ანგარიშში დამარქაფებული ყველა მონაცემი."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"თქვენ მიერ შეყვანილი პაროლი სწორია, თუმცა, სამწუხაროდ, თქვენი მონაცემები დაზიანებულია. \n\nთქვენი ტაბლეტის გამოყენების გასაგრძელებლად ქარხნულ მონაცემებზე დაბრუნება მოგიწევთ. როდესაც ამის შემდეგ ტაბლეტს ხელახლა გამართავთ, გექნებათ საშუალება, აღადგინოთ თქვენს /e/ ანგარიშში დამარქაფებული ყველა მონაცემი."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"თქვენ მიერ შეყვანილი პაროლი სწორია, თუმცა, სამწუხაროდ, თქვენი მონაცემები დაზიანებულია. \n\nტელეფონის გამოყენების გასაგრძელებლად ქარხნულ მონაცემებზე დაბრუნება მოგიწევთ. როდესაც ამის შემდეგ ტელეფონს ხელახლა გამართავთ, გექნებათ საშუალება, აღადგინოთ თქვვენს /e/ ანგარიშში დამარქაფებული ყველა მონაცემი."</string>
     <string name="crypt_keeper_switch_input_method" msgid="4168332125223483198">"შეყვანის მეთოდის ცვლილება"</string>
     <string name="suggested_lock_settings_title" msgid="8971630898700461034">"ეკრანის დაბლოკვის მეთოდის დაყენება"</string>
     <string name="suggested_lock_settings_summary" msgid="8778462376012231110">"დაიცავით თქვენი მოწყობილობა"</string>
@@ -1347,8 +1347,8 @@
     <string name="network_reset_not_available" msgid="7188610385577164676">"ქსელის გადაყენება ამ მომხმარებლისათვის მიუწვდომელია"</string>
     <string name="reset_network_complete_toast" msgid="787829973559541880">"ქსელის პარამეტრები ჩამოიყარა"</string>
     <string name="master_clear_title" msgid="3531267871084279512">"ყველა მონაცემის ამოშლა (ქარხნული პარამეტრების დაბრუნება)"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"ეს მოქმედება წაშლის ყველა მონაცემებს თქვენი ტაბლეტის "<b>"შიდა მეხსიერებიდან"</b>", მათ შორის:\n\n"<li>"თქვენს Google-ის ანგარიშს"</li>\n<li>"სისტემისა და აპების მონაცემებს და პარამეტრებს"</li>\n<li>"ჩამოტვირთულ აპებს"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"ეს მოქმედება წაშლის ყველა მონაცემებს თქვენი ტელეფონის "<b>"შიდა მეხსიერებიდან"</b>", მათ შორის:\n\n"<li>"თქვენს Google-ის ანგარიშს"</li>\n<li>"სისტემისა და აპების მონაცემებს და პარამეტრებს"</li>\n<li>"ჩამოტვირთულ აპებს"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"ეს მოქმედება წაშლის ყველა მონაცემებს თქვენი ტაბლეტის "<b>"შიდა მეხსიერებიდან"</b>", მათ შორის:\n\n"<li>"თქვენს /e/-ის ანგარიშს"</li>\n<li>"სისტემისა და აპების მონაცემებს და პარამეტრებს"</li>\n<li>"ჩამოტვირთულ აპებს"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"ეს მოქმედება წაშლის ყველა მონაცემებს თქვენი ტელეფონის "<b>"შიდა მეხსიერებიდან"</b>", მათ შორის:\n\n"<li>"თქვენს /e/-ის ანგარიშს"</li>\n<li>"სისტემისა და აპების მონაცემებს და პარამეტრებს"</li>\n<li>"ჩამოტვირთულ აპებს"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"ამჟამად შესული ხართ შემდეგ ანგარიშებში:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n" ამ მოწყობილობაზე წარმოდგენილია სხვა მომხმარებლები. \n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"მუსიკა"</li>\n<li>"ფოტოები"</li>\n<li>"მომხმარებლის სხვა მონაცემები"</li></string>
@@ -1433,7 +1433,7 @@
     <string name="location_scanning_bluetooth_always_scanning_title" msgid="5444989508204520019">"Bluetooth სკანირება"</string>
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="8602726521250591852">"გააუმჯობესეთ მდებარეობა ნებისმიერ დროს სისტემის აპებისა და სერვისებისთვის Bluetooth მოწყობილობების აღმოჩენის უფლების მიცემით."</string>
     <string name="location_network_based" msgid="9134175479520582215">"Wi‑Fi &amp; მობილური ქსელის მდებარეობა"</string>
-    <string name="location_neighborhood_level" msgid="5141318121229984788">"თქვენი ადგილმდებარეობის უფრო სწრაფად დასადგენად დართეთ აპებს ნება, გამოიყენონ Google-ის მდებარეობის სერვისი. ანონიმური მდებარეობის მომაცემები შეგროვდება და გაეგზავნება Google-ს."</string>
+    <string name="location_neighborhood_level" msgid="5141318121229984788">"თქვენი ადგილმდებარეობის უფრო სწრაფად დასადგენად დართეთ აპებს ნება, გამოიყენონ /e/-ის მდებარეობის სერვისი. ანონიმური მდებარეობის მომაცემები შეგროვდება და გაეგზავნება /e/-ს."</string>
     <string name="location_neighborhood_level_wifi" msgid="4234820941954812210">"Wi‑Fi-ს მიერ დადგენილი ადგილმდებარეობა"</string>
     <string name="location_gps" msgid="8392461023569708478">"GPS სატელიტები"</string>
     <string name="location_street_level" product="tablet" msgid="1669562198260860802">"აპებს მიეცეს GPS-ით სარგებლობის საშუალება თქვენი ზუსტი მდებარეობის დასადგენად"</string>
@@ -1441,8 +1441,8 @@
     <string name="assisted_gps" msgid="4649317129586736885">"A-GPS-ის გამოყენება"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"GPS-ის დასახმარებლად სერვერის გამოყენება  (კავშირის გამოყენების შესამცირებლად, მოხსენით მონიშვნა)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"GPS დასახმარებლად გამოიყენე სერვერი (გამორთეთ GPS მუშაობის გასაუმჯობესებლად)"</string>
-    <string name="use_location_title" msgid="5206937465504979977">"&amp;amp მდებარეობა; Google ძიება"</string>
-    <string name="use_location_summary" msgid="3978805802386162520">"მიეცეს უფლება Google-ს, გამოიყენოს თქვენი მდებარეობა ძიების შედეგებისა და სხვა სერვისების გაუმჯობესების მიზნით."</string>
+    <string name="use_location_title" msgid="5206937465504979977">"&amp;amp მდებარეობა; /e/ ძიება"</string>
+    <string name="use_location_summary" msgid="3978805802386162520">"მიეცეს უფლება /e/-ს, გამოიყენოს თქვენი მდებარეობა ძიების შედეგებისა და სხვა სერვისების გაუმჯობესების მიზნით."</string>
     <string name="location_access_title" msgid="7064108942964081243">"ჩემს მდებარეობაზე წვდომა"</string>
     <string name="location_access_summary" msgid="69031404093194341">"აპებს, რომლებმაც ითხოვა თქვენი მდებარეობის ინფორმაციის გამოყენების ნებართვა"</string>
     <string name="location_sources_heading" msgid="1278732419851088319">"მდებარეობის წყაროები"</string>
@@ -2238,7 +2238,7 @@
     <string name="backup_section_title" msgid="7952232291452882740">"სარეზერვო კოპირება და აღდგენა"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"პერსონალური მონაცემები"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"მონაცემების სარეზერვო კოპირება"</string>
-    <string name="backup_data_summary" msgid="708773323451655666">"Google სერვერებზე აპების მონაცემების, Wi-Fi პაროლების და სხვა პარამეტრების შენახვა"</string>
+    <string name="backup_data_summary" msgid="708773323451655666">"/e/ სერვერებზე აპების მონაცემების, Wi-Fi პაროლების და სხვა პარამეტრების შენახვა"</string>
     <string name="backup_configure_account_title" msgid="3790872965773196615">"სარეზერვო ანგარიში"</string>
     <string name="include_app_data_title" msgid="2829970132260278394">"აპის მონაცემების ჩათვლით"</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"ავტომატური აღდგენა"</string>
@@ -2246,7 +2246,7 @@
     <string name="backup_inactive_title" msgid="685838037986644604">"სარეზერვო კოპირების სერვისი აქტიური არ არის"</string>
     <string name="backup_configure_account_default_summary" msgid="2436933224764745553">"ამჟამად არცერთი ანგარიში არ ინახავს დამარქაფებულ მონაცემებს"</string>
     <string name="backup_erase_dialog_title" msgid="1027640829482174106"></string>
-    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"გსურთ, თქვენი Wi-Fi პაროლების, სანიშნეების, სხვა პარამეტრებისა და აპების მონაცემების სარეზერვო ასლების მომზადების შეწყვეტა და Google-ის სერვერებიდან ყველა ასლის წაშლა?"</string>
+    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"გსურთ, თქვენი Wi-Fi პაროლების, სანიშნეების, სხვა პარამეტრებისა და აპების მონაცემების სარეზერვო ასლების მომზადების შეწყვეტა და /e/-ის სერვერებიდან ყველა ასლის წაშლა?"</string>
     <string name="fullbackup_erase_dialog_message" msgid="694766389396659626">"გსურთ, შეწყდეს მოწყობილობის მონაცემებისა (მათ შორის, Wi-Fi პაროლებისა და საუბრის ისტორიის) და აპების მონაცემების (მათ შორის, აპების მიერ შენახული პარამეტრებისა და ფაილების) სარეზერვო ასლების შექმნა და, ამასთანავე, წაიშალოს ყველა ასლი დისტანციურ სერვერებზე?"</string>
     <string name="fullbackup_data_summary" msgid="960850365007767734">"მოწყობილობის მონაცემებისთვის (როგორიცაა Wi-Fi პაროლები და საუბრის ისტორია) და აპების მონაცემებისთვის (როგორიცაა აპების მიერ შენახული პარამეტრები და ფაილები) სარეზერვო ასლების ავტომატურად შექმნა განცალკევებით.\n\nროდესაც ჩართავთ სარეზერვო ასლების ავტომატურად შექმნას, მოწყობილობისა და აპების მონაცემები პერიოდულად ცალკე შეინახება. აპის მონაცემები შეიძლება იყოს აპის მიერ შენახული ნებისმიერი მონაცემი (დეველოპერის პარამეტრებზე დაყრდნობით), მათ შორის პოტენციურად სენსიტიური მონაცემები, როგორიცაა კონტაქტები, შეტყობინებები და ფოტოები."</string>
     <string name="device_admin_settings_title" msgid="4960761799560705902">"მოწყობილობის ადმინისტრატორის პარამეტრები"</string>
@@ -2333,7 +2333,7 @@
     <string name="sync_gmail" msgid="714886122098006477">"Gmail"</string>
     <string name="sync_calendar" msgid="9056527206714733735">"კალენდარი"</string>
     <string name="sync_contacts" msgid="9174914394377828043">"კონტაქტები"</string>
-    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"მოგესალმებით Google-ის სინქრონიზაციაში!"</font>" \nGoogle-ის სინქრონიზაციის ტექნოლოგიის საშუალებით თქვენთვის ხელმისაწვდომია თქვენი კონტაქტები, შეხვედრები და ბევრი სხვა რამ ნებისმიერი მოწყობილობიდან."</string>
+    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"მოგესალმებით /e/-ის სინქრონიზაციაში!"</font>" \n/e/-ის სინქრონიზაციის ტექნოლოგიის საშუალებით თქვენთვის ხელმისაწვდომია თქვენი კონტაქტები, შეხვედრები და ბევრი სხვა რამ ნებისმიერი მოწყობილობიდან."</string>
     <string name="header_application_sync_settings" msgid="6205903695598000286">"აპების სინქრონიზაციის პარამეტრები"</string>
     <string name="header_data_and_synchronization" msgid="5165024023936509896">"მონაცემთა სინქრონიზაცია"</string>
     <string name="preference_change_password_title" msgid="8955581790270130056">"პაროლის შეცვლა"</string>
@@ -2422,8 +2422,8 @@
     <string name="data_usage_app_restrict_dialog" msgid="1466689968707308512">"იმ შემთხვევაში, თუ ხელმისაწვდომი იქნება მხოლოდ მობილური ინტერნეტი, ამ პარამეტრმა შეიძლება გამოიწვიოს მონაცემთა ფონურ გადაცემაზე დამოკიდებული აპლიკაციების მუშაობის შეწყვეტა.\n\nმონაცემთა გადაცემის შესაფერისი პარამეტრების პოვნა შესაძლებელია ამ აპლიკაციების პარამეტრებში."</string>
     <string name="data_usage_restrict_denied_dialog" msgid="55012417305745608">"ფონური მონაცემების შეზღუდვა შესაძლებელია მხოლოდ მაშინ, როდესაც თქვენ დააყენებთ მობილური ინტერნეტის ლიმიტს."</string>
     <string name="data_usage_auto_sync_on_dialog_title" msgid="2438617846762244389">"ჩაირთოს მონაცემთა ავტომატური სინქრონიზაცია?"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"ვებზე თქვენს ანგარიშებში განხორციელებული ყველა ცვლილება ავტომატურად დაკოპირდება თქვენს ტაბლეტში.\n\nზოგიერთი ანგარიში ასევე ვებზე ავტომატურად დააკოპირებს თქვენ მიერ ტაბლეტში განხორციელებულ ცვლილებებს. Google ანგარიში ასე ფუნქციონირებს."</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"ვებზე თქვენს ანგარიშებში განხორციელებული ყველა ცვლილება ავტომატურად დაკოპირდება თქვენს ტელეფონში.\n\nზოგიერთი ანგარიში ასევე ვებზე ავტომატურად დააკოპირებს თქვენ მიერ ტელეფონში განხორციელებულ ცვლილებებს. Google ანგარიში ასე ფუნქციონირებს."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"ვებზე თქვენს ანგარიშებში განხორციელებული ყველა ცვლილება ავტომატურად დაკოპირდება თქვენს ტაბლეტში.\n\nზოგიერთი ანგარიში ასევე ვებზე ავტომატურად დააკოპირებს თქვენ მიერ ტაბლეტში განხორციელებულ ცვლილებებს. /e/ ანგარიში ასე ფუნქციონირებს."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"ვებზე თქვენს ანგარიშებში განხორციელებული ყველა ცვლილება ავტომატურად დაკოპირდება თქვენს ტელეფონში.\n\nზოგიერთი ანგარიში ასევე ვებზე ავტომატურად დააკოპირებს თქვენ მიერ ტელეფონში განხორციელებულ ცვლილებებს. /e/ ანგარიში ასე ფუნქციონირებს."</string>
     <string name="data_usage_auto_sync_off_dialog_title" msgid="9013139130490125793">"გამოირთოს მონაცემთა ავტომატური სინქრონიზაცია?"</string>
     <string name="data_usage_auto_sync_off_dialog" msgid="4025938250775413864">"ეს გამოიწვევს მონაცემებისა და ბატარეის გამოყენების დაზოგვას, მაგრამ თქვენ ბოლო ინფორმაციის შესაგროვებლად დაგჭირდებათ თითოეულ ანგარიშთან მექანიკურად სინქრონიზაცია. განახლებების შესახებ შეტყობინებებს არ მიიღებთ."</string>
     <string name="data_usage_cycle_editor_title" msgid="1373797281540188533">"გამოყენების ციკლის ჩამოყრის თარიღი"</string>
@@ -3705,7 +3705,7 @@
     <string name="webview_disabled_for_user" msgid="1216426047631256825">"(გათიშულია მომხმარებლისთვის: <xliff:g id="USER">%s</xliff:g>)"</string>
     <string name="autofill_app" msgid="7338387238377914374">"ავტომატური შევსების სერვისი"</string>
     <string name="autofill_keywords" msgid="7485591824120812710">"ავტომატური, შევსება, ავტოშევსება"</string>
-    <string name="autofill_confirmation_message" msgid="2784869528908005194">"&lt;b&gt;დარწმუნდით, რომ ენდობით ამ აპს&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=Google-ის ავტომატური შევსება&gt;%1$s&lt;/xliff:g&gt; იყენებს თქვენს ეკრანზე არსებულ კონტენტს, რათა გაარკვიოს, რა შეიძლება შეივსოს ავტომატურად."</string>
+    <string name="autofill_confirmation_message" msgid="2784869528908005194">"&lt;b&gt;დარწმუნდით, რომ ენდობით ამ აპს&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=/e/-ის ავტომატური შევსება&gt;%1$s&lt;/xliff:g&gt; იყენებს თქვენს ეკრანზე არსებულ კონტენტს, რათა გაარკვიოს, რა შეიძლება შეივსოს ავტომატურად."</string>
     <string name="device_theme" msgid="4571803018917608588">"მოწყობილობის თემა"</string>
     <string name="default_theme" msgid="7085644992078579076">"ნაგულისხმევი"</string>
     <string name="storage_manager_indicator" msgid="1516810749625915020">"მეხსიერების მენეჯერი: <xliff:g id="STATUS">^1</xliff:g>"</string>
