--- a/res/values-kk/strings.xml
+++ b/res/values-kk/strings.xml
@@ -445,11 +445,11 @@
     <string name="crypt_keeper_warn_wipe" msgid="2738374897337991667">"Ескерту: бекітпесін ашудың тағы <xliff:g id="COUNT">^1</xliff:g> әрекетінен кейін құрылғыңыздың деректері өшіріледі!"</string>
     <string name="crypt_keeper_enter_password" msgid="2223340178473871064">"Кілстөзін теру"</string>
     <string name="crypt_keeper_failed_title" msgid="7133499413023075961">"Кодтау орындалмады"</string>
-    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"Кодтау үзілді және аяқтау мүмкін болмайды. Нәтижесінде планшеттегі деректер қол жетімсіз. \n\n Планшетті қолдану мүмкін болу үшін зауыттық параметрін қайтару қажет. Планшетті қайта ретегеннен кейін орнату барысында Google есептік жазбаңыздағы сақтық көшірмелері арқылы деректерді қалпына келтіру мүмкіндігіңіз болады."</string>
-    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"Кодтау үзілді және аяқтау мүмкін болмайды. Нәтижесінде телефондағы деректер қол жетімсіз. \n\nТелефонды қолдану мүмкін болу үшін зауыттық параметрін қайтару қажет. Телефонды қайта ретегеннен кейін орнату барысында Google есептік жазбаңыздағы сақтық көшірмелері арқылы деректерді қалпына келтіру мүмкіндігіңіз болады."</string>
+    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"Кодтау үзілді және аяқтау мүмкін болмайды. Нәтижесінде планшеттегі деректер қол жетімсіз. \n\n Планшетті қолдану мүмкін болу үшін зауыттық параметрін қайтару қажет. Планшетті қайта ретегеннен кейін орнату барысында /e/ есептік жазбаңыздағы сақтық көшірмелері арқылы деректерді қалпына келтіру мүмкіндігіңіз болады."</string>
+    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"Кодтау үзілді және аяқтау мүмкін болмайды. Нәтижесінде телефондағы деректер қол жетімсіз. \n\nТелефонды қолдану мүмкін болу үшін зауыттық параметрін қайтару қажет. Телефонды қайта ретегеннен кейін орнату барысында /e/ есептік жазбаңыздағы сақтық көшірмелері арқылы деректерді қалпына келтіру мүмкіндігіңіз болады."</string>
     <string name="crypt_keeper_data_corrupt_title" msgid="8759119849089795751">"Шифрлаудан шығару сәтсіз аяқталды"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"Сіз енгізген құпия сөз дұрыс, бірақ, өкінішке орай, деректеріңіз бүлінген. \n\nПланшетті әрі қарай пайдалану үшін, зауыттық параметрлерді қалпына келтіруіңіз керек. Қалпына келтіргеннен кейін планшетті реттегенде, сізде Google есептік жазбаңызға сақтық көшірмесі жасалған барлық деректерді қалпына келтіру мүмкіндігі болады."</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"Сіз енгізген құпия сөз дұрыс, бірақ, өкінішке орай, деректеріңіз бүлінген. \n\nТелефонды әрі қарай пайдалану үшін, зауыттық параметрлерді қалпына келтіруіңіз керек. Қалпына келтіргеннен кейін телефонды реттегенде, сізде Google есептік жазбаңызға сақтық көшірмесі жасалған барлық деректерді қалпына келтіру мүмкіндігі болады."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"Сіз енгізген құпия сөз дұрыс, бірақ, өкінішке орай, деректеріңіз бүлінген. \n\nПланшетті әрі қарай пайдалану үшін, зауыттық параметрлерді қалпына келтіруіңіз керек. Қалпына келтіргеннен кейін планшетті реттегенде, сізде /e/ есептік жазбаңызға сақтық көшірмесі жасалған барлық деректерді қалпына келтіру мүмкіндігі болады."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"Сіз енгізген құпия сөз дұрыс, бірақ, өкінішке орай, деректеріңіз бүлінген. \n\nТелефонды әрі қарай пайдалану үшін, зауыттық параметрлерді қалпына келтіруіңіз керек. Қалпына келтіргеннен кейін телефонды реттегенде, сізде /e/ есептік жазбаңызға сақтық көшірмесі жасалған барлық деректерді қалпына келтіру мүмкіндігі болады."</string>
     <string name="crypt_keeper_switch_input_method" msgid="4168332125223483198">"Енгізу әдістерін ауыстыру"</string>
     <string name="suggested_lock_settings_title" msgid="8971630898700461034">"Экран құлпын орнату"</string>
     <string name="suggested_lock_settings_summary" msgid="8778462376012231110">"Құрылғыны қорғау"</string>
@@ -1347,8 +1347,8 @@
     <string name="network_reset_not_available" msgid="7188610385577164676">"Бұл пайдаланушы желіні қалпына келтіре алмайды"</string>
     <string name="reset_network_complete_toast" msgid="787829973559541880">"Желі параметрлері қалпына келтірілген"</string>
     <string name="master_clear_title" msgid="3531267871084279512">"Барлық деректерді өшіру (зауыттық параметрлерді қайтару)"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Бұл сіздің планшетіңіздің "<b>"ішкі жадынан"</b>" барлық дерекқорды өшіреді, келесі деректерді қоса:\n\n"<li>"Google есептік жазбаңыз"</li>\n<li>"Жүйе және қолданба дерекқоры және параметрлері"</li>\n<li>"Жүктелген қолданбалар"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Телефонның "<b>"ішкі жадында"</b>" бар бүкіл дерек өшеді, соның ішінде:\n\n"<li>" Google есептік жазбаңыз"</li>\n<li>"Жүйе және қолданба деректері мен параметрлері"</li>\n<li>"Жүктелген қолданбалар"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Бұл сіздің планшетіңіздің "<b>"ішкі жадынан"</b>" барлық дерекқорды өшіреді, келесі деректерді қоса:\n\n"<li>"/e/ есептік жазбаңыз"</li>\n<li>"Жүйе және қолданба дерекқоры және параметрлері"</li>\n<li>"Жүктелген қолданбалар"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Телефонның "<b>"ішкі жадында"</b>" бар бүкіл дерек өшеді, соның ішінде:\n\n"<li>" /e/ есептік жазбаңыз"</li>\n<li>"Жүйе және қолданба деректері мен параметрлері"</li>\n<li>"Жүктелген қолданбалар"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"Сіз келесі есептік жазбаларға кірдіңіз:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"Осы құрылғыда басқа пайдаланушылар бар.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"Mузыка"</li>\n<li>"Фотосуреттер"</li>\n<li>"Басқа пайдаланушы деректері"</li></string>
@@ -1433,7 +1433,7 @@
     <string name="location_scanning_bluetooth_always_scanning_title" msgid="5444989508204520019">"Bluetooth іздеу"</string>
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="8602726521250591852">"Орын дәлірек анықталуы үшін жүйелік қолданбаларға және қызметтерге Bluetooth құрылғыларын толассыз іздеп отыруға рұқсат етіңіз."</string>
     <string name="location_network_based" msgid="9134175479520582215">"Wi‑Fi және ұялы желі орны"</string>
-    <string name="location_neighborhood_level" msgid="5141318121229984788">"Аймағыңызды жылдамырақ анықтау үшін қолданбаларға Google\' аймақтар қызметін қолдануға рұқсат етіңіз. Аймақ туралы деректер анонимді түрде жинақталып, Google-ға жіберіледі."</string>
+    <string name="location_neighborhood_level" msgid="5141318121229984788">"Аймағыңызды жылдамырақ анықтау үшін қолданбаларға /e/\' аймақтар қызметін қолдануға рұқсат етіңіз. Аймақ туралы деректер анонимді түрде жинақталып, /e/-ға жіберіледі."</string>
     <string name="location_neighborhood_level_wifi" msgid="4234820941954812210">"Орын Wi‑Fi арқылы анықталды"</string>
     <string name="location_gps" msgid="8392461023569708478">"GPS серіктері"</string>
     <string name="location_street_level" product="tablet" msgid="1669562198260860802">"Қолданбаларға аймақты нақты анықтау үшін планшеттегі GPS функциясын қолдануға рұқсат беру"</string>
@@ -1441,8 +1441,8 @@
     <string name="assisted_gps" msgid="4649317129586736885">"Көмекшісі бар GPS қолдану"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"GPS көмекшісі ретінде сервер қолдану (желі қолдануды азайту үшін құсбелгіні алу)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"GPS көмекшісі ретінде сервер қолдану (GPS жұмысын жақсарту үшін құсбелгіні алыңыз)"</string>
-    <string name="use_location_title" msgid="5206937465504979977">"Орын және Google іздеу"</string>
-    <string name="use_location_summary" msgid="3978805802386162520">"Іздеу нәтижелерін және басқа қызметтерді жақсарту үшін Google қызметіне аймағыңызды қолдануға рұқсат беріңіз."</string>
+    <string name="use_location_title" msgid="5206937465504979977">"Орын және /e/ іздеу"</string>
+    <string name="use_location_summary" msgid="3978805802386162520">"Іздеу нәтижелерін және басқа қызметтерді жақсарту үшін /e/ қызметіне аймағыңызды қолдануға рұқсат беріңіз."</string>
     <string name="location_access_title" msgid="7064108942964081243">"Аймағыма кіру"</string>
     <string name="location_access_summary" msgid="69031404093194341">"Рұқсат сұраған қолданбаларға аймағыңыз туралы ақпаратты қолдану мүмкіндігін беру"</string>
     <string name="location_sources_heading" msgid="1278732419851088319">"Орын дереккөздері"</string>
@@ -2238,7 +2238,7 @@
     <string name="backup_section_title" msgid="7952232291452882740">"Сақтық көшірме жасау және қалпына келтіру"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"Жеке деректер"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"Деректердің сақтық көшірмесін жасау"</string>
-    <string name="backup_data_summary" msgid="708773323451655666">"Қолданба дерекқоры, Wi‑Fi кілтсөздері және басқа параметрлердің сақтық көшірмесін Google серверлеріне сақтаңыз"</string>
+    <string name="backup_data_summary" msgid="708773323451655666">"Қолданба дерекқоры, Wi‑Fi кілтсөздері және басқа параметрлердің сақтық көшірмесін /e/ серверлеріне сақтаңыз"</string>
     <string name="backup_configure_account_title" msgid="3790872965773196615">"Сақтық есептік жазба"</string>
     <string name="include_app_data_title" msgid="2829970132260278394">"Қолданба деректерін қамту"</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"Aвтоматты қалпына келтіру"</string>
@@ -2246,7 +2246,7 @@
     <string name="backup_inactive_title" msgid="685838037986644604">"Сақтық көшірме жасау қызметі қосылмаған"</string>
     <string name="backup_configure_account_default_summary" msgid="2436933224764745553">"Ешқандай есептік жазба қазір сақтық көшірмесі жасалған деректерді сақтап жатқан жоқ"</string>
     <string name="backup_erase_dialog_title" msgid="1027640829482174106"></string>
-    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"Wi‑Fi құпия сөздері, бетбелгілер, басқа параметрлер мен қолданба деректерінің сақтық көшірмесін жасау процесі тоқтатылып, Google серверлеріндегі көшірмелер жойылсын ба?"</string>
+    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"Wi‑Fi құпия сөздері, бетбелгілер, басқа параметрлер мен қолданба деректерінің сақтық көшірмесін жасау процесі тоқтатылып, /e/ серверлеріндегі көшірмелер жойылсын ба?"</string>
     <string name="fullbackup_erase_dialog_message" msgid="694766389396659626">"Құрылғы деректерінің (мысалы, Wi-Fi құпия сөзі және қоңырау журналы) және қолданба деректерінің (мысалы, қолданбалар сақтаған параметрлер мен файлдар) сақтық көшірмесін жасап, қашықтағы серверлерден барлық көшірмелерді өшіру керек пе?"</string>
     <string name="fullbackup_data_summary" msgid="960850365007767734">"Құрылғы деректерінің (мысалы, Wi-Fi құпия сөздері және қоңыраулар тарихы) және қолданба деректерінің (мысалы, қолданбалар сақтайтын параметрлер және файлдар) сақтық көшірмесін қашықтан автоматты түрде жасау.\n\nСақтық көшірмені автоматты түрде жасау функциясын қоссаңыз, құрылғы және қолданба деректері қашықтан сақталып отырады. Қолданба деректеріне қолданбаға сақталған кез келген дерек (әзірлеуші параметрлеріне байланысты), соның ішінде контактілер, хабарлар және фотосуреттер сияқты құпия деректер жатады."</string>
     <string name="device_admin_settings_title" msgid="4960761799560705902">"Құрылғы әкімшісінің параметрлері"</string>
@@ -2333,7 +2333,7 @@
     <string name="sync_gmail" msgid="714886122098006477">"Gmail"</string>
     <string name="sync_calendar" msgid="9056527206714733735">"Күнтізбе"</string>
     <string name="sync_contacts" msgid="9174914394377828043">"Байланыстар"</string>
-    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Google синх қызметіне қош келдіңіз!"</font>" \nGoogle дерекқор синхрондау әдісі  қай жерде болсаңыз да контактілер, кездесулер және басқа деректердің қол жетімді болуын мүмкін қылады."</string>
+    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"/e/ синх қызметіне қош келдіңіз!"</font>" \n/e/ дерекқор синхрондау әдісі  қай жерде болсаңыз да контактілер, кездесулер және басқа деректердің қол жетімді болуын мүмкін қылады."</string>
     <string name="header_application_sync_settings" msgid="6205903695598000286">"Қолданбаларды синхрондау параметрлері"</string>
     <string name="header_data_and_synchronization" msgid="5165024023936509896">"Дерекқор және синхрондау"</string>
     <string name="preference_change_password_title" msgid="8955581790270130056">"Кілтсөзді өзгерту"</string>
@@ -2422,8 +2422,8 @@
     <string name="data_usage_app_restrict_dialog" msgid="1466689968707308512">"Ұял желілер ғана қол жетімді болғанда бұл функция жалпы ақпаратқа тәуелді қолданбалардың жұмысын тоқтатады.\n\nДерекқорды дұрыс қолдануды басқарудың басқа мүмкіндіктерін қолданбаның параметрлері арқылы табуға болады."</string>
     <string name="data_usage_restrict_denied_dialog" msgid="55012417305745608">"Мобильдік деректер шегі белгіленген кезде ғана фондық деректерді шектеуге болады."</string>
     <string name="data_usage_auto_sync_on_dialog_title" msgid="2438617846762244389">"Автосихрондау қосылсын ба?"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"Cіз интернетте есептік жазбаларыңызға енгізген кез келген өзгертулер планшетіңізге автоматты түрде көшіріледі.\n\nСондай-ақ, кейбір есептік жазбалар сіз планшетте енгізген кез келген өзгертулерді интернетке көшіре алады. Google есептік жазбасы осылай жұмыс істейді."</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"Cіз интернетте есептік жазбаларыңызға енгізген кез келген өзгертулер телефоныңызға автоматты түрде көшіріледі.\n\nСондай-ақ, кейбір есептік жазбалар сіз телефонда енгізген кез келген өзгертулерді интернетке көшіре алады. Google есептік жазбасы осылай жұмыс істейді."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"Cіз интернетте есептік жазбаларыңызға енгізген кез келген өзгертулер планшетіңізге автоматты түрде көшіріледі.\n\nСондай-ақ, кейбір есептік жазбалар сіз планшетте енгізген кез келген өзгертулерді интернетке көшіре алады. /e/ есептік жазбасы осылай жұмыс істейді."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"Cіз интернетте есептік жазбаларыңызға енгізген кез келген өзгертулер телефоныңызға автоматты түрде көшіріледі.\n\nСондай-ақ, кейбір есептік жазбалар сіз телефонда енгізген кез келген өзгертулерді интернетке көшіре алады. /e/ есептік жазбасы осылай жұмыс істейді."</string>
     <string name="data_usage_auto_sync_off_dialog_title" msgid="9013139130490125793">"Автосинхрондау өшірілсін бе?"</string>
     <string name="data_usage_auto_sync_off_dialog" msgid="4025938250775413864">"Бұл трафик пен батарея зарядын үнемдейді, бірақ соңғы ақпаратты жинау үшін әр есептік жазбаны қолмен синхрондау қажет болады. Сондай-ақ жаңартулар шыққанда, хабарландыру жіберілмейді."</string>
     <string name="data_usage_cycle_editor_title" msgid="1373797281540188533">"Статистиканы жаңадан бастау күні"</string>
@@ -3705,7 +3705,7 @@
     <string name="webview_disabled_for_user" msgid="1216426047631256825">"(<xliff:g id="USER">%s</xliff:g> деген пайдаланушы үшін өшірілген)"</string>
     <string name="autofill_app" msgid="7338387238377914374">"Автотолтыру қызметі"</string>
     <string name="autofill_keywords" msgid="7485591824120812710">"авто, толтыру, автотолтыру"</string>
-    <string name="autofill_confirmation_message" msgid="2784869528908005194">"&lt;b&gt;Осы қолданбаның қауіпсіз екеніне көз жеткізіңіз&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=Google Autofill&gt;%1$s&lt;/xliff:g&gt; экранда көрсетілгенді пайдаланып, нені автоматты түрде толтыруға болатынын анықтайды."</string>
+    <string name="autofill_confirmation_message" msgid="2784869528908005194">"&lt;b&gt;Осы қолданбаның қауіпсіз екеніне көз жеткізіңіз&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=/e/ Autofill&gt;%1$s&lt;/xliff:g&gt; экранда көрсетілгенді пайдаланып, нені автоматты түрде толтыруға болатынын анықтайды."</string>
     <string name="device_theme" msgid="4571803018917608588">"Құрылғы тақырыбы"</string>
     <string name="default_theme" msgid="7085644992078579076">"Әдепкі"</string>
     <string name="storage_manager_indicator" msgid="1516810749625915020">"Жад менеджері: <xliff:g id="STATUS">^1</xliff:g>"</string>
