--- a/res/values-ku/strings.xml
+++ b/res/values-ku/strings.xml
@@ -1157,7 +1157,7 @@
     <string name="backup_section_title">پاڵپشتamp; ڕێکخستنەوە</string>
     <string name="personal_data_section_title">داتای کەسی</string>
     <string name="backup_data_title">پشتگیری کردنی داتاکانم</string>
-    <string name="backup_data_summary">پاڵپشتکردنی داتای بەرنامە, Wi\u2011Fi تێپەڕەوشە, وە ڕێکخستنی تر بۆ خزمەتگوزاری Google</string>
+    <string name="backup_data_summary">پاڵپشتکردنی داتای بەرنامە, Wi\u2011Fi تێپەڕەوشە, وە ڕێکخستنی تر بۆ خزمەتگوزاری /e/</string>
     <string name="backup_configure_account_title">پاڵپشت بۆ هەژمار</string>
     <string name="auto_restore_title">ڕێکخستنەوەی خۆکارانە</string>
     <string name="auto_restore_summary">کاتێک دوبارە بەرنامەکە دا ئەمزرێنیتەوە. پاڵپشتێک وەرگرە لە داتای ڕێکخستن</string>
@@ -1217,8 +1217,8 @@
     <string name="sync_gmail">Gmail</string>
     <string name="sync_calendar">ڕۆژژمێر</string>
     <string name="sync_contacts">ناوەکان</string>
-    <string name="sync_plug"><font fgcolor="#ffffffff">بەخێربێیت بۆ ناردنی Google!</font>
-    \nA ڕێگەی Google ناردنی داتا ڕێگە ئەدات بۆ ناوەکان،پەیمانەکان و زیاتر لە لەبارەی تۆ .
+    <string name="sync_plug"><font fgcolor="#ffffffff">بەخێربێیت بۆ ناردنی /e/!</font>
+    \nA ڕێگەی /e/ ناردنی داتا ڕێگە ئەدات بۆ ناوەکان،پەیمانەکان و زیاتر لە لەبارەی تۆ .
     </string>
     <string name="header_application_sync_settings">ڕێکخستنی بەرنامە ناردن</string>
     <string name="header_data_and_synchronization">داتا وamp; ناردنەکان</string>
