--- a/res/values-mk/strings.xml
+++ b/res/values-mk/strings.xml
@@ -445,11 +445,11 @@
     <string name="crypt_keeper_warn_wipe" msgid="2738374897337991667">"Предупредување: уредот ќе се избрише по уште <xliff:g id="COUNT">^1</xliff:g> неуспешни обиди да се отклучи!"</string>
     <string name="crypt_keeper_enter_password" msgid="2223340178473871064">"Напиши ја лозинката"</string>
     <string name="crypt_keeper_failed_title" msgid="7133499413023075961">"Шифрирањето е неуспешно"</string>
-    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"Шифрирањето се прекина и не може да се заврши. Како резултат на тоа, податоците од вашиот таблет веќе не се достапни. \n \n За да продолжите да го користите таблетот, треба да се изврши ресетирање на фабричките поставки. Кога ќе го подесите таблетот по ресетирањето, ќе имате можност да ги обновите сите податоци за кои имате резервна копија на вашата сметка на Google."</string>
-    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"Шифрирањето се прекина и не може да се заврши. Како резултат на тоа, податоците од вашиот телефон веќе не се достапни. \n \nЗа да продолжите да го користите телефонот, треба да се изврши ресетирање на фабричките поставувања. Кога ќе го подесите телефонот по ресетирањето, ќе имате можност да ги обновите сите податоци за кои имате резервна копија на вашата сметка на Google."</string>
+    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"Шифрирањето се прекина и не може да се заврши. Како резултат на тоа, податоците од вашиот таблет веќе не се достапни. \n \n За да продолжите да го користите таблетот, треба да се изврши ресетирање на фабричките поставки. Кога ќе го подесите таблетот по ресетирањето, ќе имате можност да ги обновите сите податоци за кои имате резервна копија на вашата сметка на /e/."</string>
+    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"Шифрирањето се прекина и не може да се заврши. Како резултат на тоа, податоците од вашиот телефон веќе не се достапни. \n \nЗа да продолжите да го користите телефонот, треба да се изврши ресетирање на фабричките поставувања. Кога ќе го подесите телефонот по ресетирањето, ќе имате можност да ги обновите сите податоци за кои имате резервна копија на вашата сметка на /e/."</string>
     <string name="crypt_keeper_data_corrupt_title" msgid="8759119849089795751">"Дешифрирањето е неуспешно"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"Лозинката што ја внесовте е правилна, но, за жал, податоците се оштетени. \n\nЗа да продолжите да го користите таблетот, треба да извршите фабричко ресетирање. Кога ќе го поставувате таблетот по ресетирањето, ќе имате можност да ги обновите сите податоци што имаат резервни копии на вашата сметка на Google."</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"Лозинката што ја внесовте е правилна, но, за жал, податоците се оштетени. \n\nЗа да продолжите да го користите телефонот, треба да извршите фабричко ресетирање. Кога ќе го поставувате телефонот по ресетирањето, ќе имате можност да ги обновите сите податоци што имаат резервни копии на вашата сметка на Google."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"Лозинката што ја внесовте е правилна, но, за жал, податоците се оштетени. \n\nЗа да продолжите да го користите таблетот, треба да извршите фабричко ресетирање. Кога ќе го поставувате таблетот по ресетирањето, ќе имате можност да ги обновите сите податоци што имаат резервни копии на вашата сметка на /e/."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"Лозинката што ја внесовте е правилна, но, за жал, податоците се оштетени. \n\nЗа да продолжите да го користите телефонот, треба да извршите фабричко ресетирање. Кога ќе го поставувате телефонот по ресетирањето, ќе имате можност да ги обновите сите податоци што имаат резервни копии на вашата сметка на /e/."</string>
     <string name="crypt_keeper_switch_input_method" msgid="4168332125223483198">"Префрли метод на внес"</string>
     <string name="suggested_lock_settings_title" msgid="8971630898700461034">"Поставете заклучување на екранот"</string>
     <string name="suggested_lock_settings_summary" msgid="8778462376012231110">"Заштитете го уредот"</string>
@@ -1347,8 +1347,8 @@
     <string name="network_reset_not_available" msgid="7188610385577164676">"Мрежното ресетирање не е достапно за овој корисник"</string>
     <string name="reset_network_complete_toast" msgid="787829973559541880">"Мрежните поставки се ресетирани"</string>
     <string name="master_clear_title" msgid="3531267871084279512">"Избриши ги сите податоци (фабричко ресетирање)"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Ова ќе ги избрише сите податоци од "<b>"внатрешна меморија"</b>"на вашиот таблет, заедно со:\n\n"<li>"вашата сметка на Google"</li>\n<li>"податоци и поставки на систем и апликации"</li>\n<li>"преземени апликации"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Ова ќе ги избрише сите податоци од "<b>"внатрешната меморија"</b>" на телефонот, заедно со:\n\n"<li>"вашата сметка на Google"</li>\n<li>"податоци и поставки на систем и апликации"</li>\n<li>"преземени апликации"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Ова ќе ги избрише сите податоци од "<b>"внатрешна меморија"</b>"на вашиот таблет, заедно со:\n\n"<li>"вашата сметка на /e/"</li>\n<li>"податоци и поставки на систем и апликации"</li>\n<li>"преземени апликации"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Ова ќе ги избрише сите податоци од "<b>"внатрешната меморија"</b>" на телефонот, заедно со:\n\n"<li>"вашата сметка на /e/"</li>\n<li>"податоци и поставки на систем и апликации"</li>\n<li>"преземени апликации"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"Моментално сте најавени на следниве сметки:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"Присутни се и други корисници на уредот.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"Музика"</li>\n<li>"Фотографии"</li>\n<li>"Други податоци за корисникот"</li></string>
@@ -1433,7 +1433,7 @@
     <string name="location_scanning_bluetooth_always_scanning_title" msgid="5444989508204520019">"Скенирање на Bluetooth"</string>
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="8602726521250591852">"За да ја подобрите локацијата, дозволете системските апликации и услуги да откриваат уреди со Bluetooth во секое време."</string>
     <string name="location_network_based" msgid="9134175479520582215">"Wi‑Fi &amp;лок. на моб. мрежа"</string>
-    <string name="location_neighborhood_level" msgid="5141318121229984788">"За брза процена, овозможи услуга за локација на Google. Анонимните податоци за локација се собираат и се испраќаат на Google."</string>
+    <string name="location_neighborhood_level" msgid="5141318121229984788">"За брза процена, овозможи услуга за локација на /e/. Анонимните податоци за локација се собираат и се испраќаат на /e/."</string>
     <string name="location_neighborhood_level_wifi" msgid="4234820941954812210">"Локацијата е утврдена со Wi-Fi"</string>
     <string name="location_gps" msgid="8392461023569708478">"GPS сателити"</string>
     <string name="location_street_level" product="tablet" msgid="1669562198260860802">"Дозволете апликациите да користат GPS на таблетот за да се означи вашата локација"</string>
@@ -1441,8 +1441,8 @@
     <string name="assisted_gps" msgid="4649317129586736885">"Користи GPS со помош"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"Користи сервер како помош за GPS (отштиклирај за да се намали употребата на мрежата)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"Користи сервер како помош за GPS (отштиклирај за да се подобри учинокот на GPS)"</string>
-    <string name="use_location_title" msgid="5206937465504979977">"Локација и пребарув. на Google"</string>
-    <string name="use_location_summary" msgid="3978805802386162520">"Дозволете Google да ја користи локацијата за да ги подобри резултатите од пребарување и други услуги"</string>
+    <string name="use_location_title" msgid="5206937465504979977">"Локација и пребарув. на /e/"</string>
+    <string name="use_location_summary" msgid="3978805802386162520">"Дозволете /e/ да ја користи локацијата за да ги подобри резултатите од пребарување и други услуги"</string>
     <string name="location_access_title" msgid="7064108942964081243">"Пристапи кон мојата локација"</string>
     <string name="location_access_summary" msgid="69031404093194341">"Дозволи апликациите кои побарале дозвола да ги користат твоите информации за локација"</string>
     <string name="location_sources_heading" msgid="1278732419851088319">"Извори на локација"</string>
@@ -2238,7 +2238,7 @@
     <string name="backup_section_title" msgid="7952232291452882740">"Бекап и обнова"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"Лични податоци"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"Направи резервна копија на моите податоци"</string>
-    <string name="backup_data_summary" msgid="708773323451655666">"Бекап на податоци за апликација, на лозинки на Wi-Fi и други поставки на сервери на Google"</string>
+    <string name="backup_data_summary" msgid="708773323451655666">"Бекап на податоци за апликација, на лозинки на Wi-Fi и други поставки на сервери на /e/"</string>
     <string name="backup_configure_account_title" msgid="3790872965773196615">"Сметка за бекап"</string>
     <string name="include_app_data_title" msgid="2829970132260278394">"Опфати податоци за апликација"</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"Автоматско враќање"</string>
@@ -2246,7 +2246,7 @@
     <string name="backup_inactive_title" msgid="685838037986644604">"Услугата за бекап не е активна"</string>
     <string name="backup_configure_account_default_summary" msgid="2436933224764745553">"Во моментов нема сметка каде што се складираат резервни копии на податоци"</string>
     <string name="backup_erase_dialog_title" msgid="1027640829482174106"></string>
-    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"Да престане со резервни копии на вашите лозинки на Wi-Fi, обележувачи, други поставки и податоци за апликацијата и да ги избрише сите копии на серверите на Google?"</string>
+    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"Да престане со резервни копии на вашите лозинки на Wi-Fi, обележувачи, други поставки и податоци за апликацијата и да ги избрише сите копии на серверите на /e/?"</string>
     <string name="fullbackup_erase_dialog_message" msgid="694766389396659626">"Дали да се престане со создавање резервна копија на податоците за уредот (како што се лозинки за Wi-Fi и историја на повици) и податоците за апликациите (како што се поставки и датотеки што ги складирале апликациите) и да се избришат сите копии на далечински сервери?"</string>
     <string name="fullbackup_data_summary" msgid="960850365007767734">"Автоматски создајте резервна копија на податоците на уредот (како што се лозинки за Wi-Fi и историја на повици) и податоците за апликациите (како што се поставки и датотеки кои ги складирале апликациите) од далечина.\n\nОткако ќе вклучите автоматско создавање резервна копија, податоците за уредот и апликациите повремено се зачувуваат на далечина. Податоците за апликацијата може да бидат секакви податоци кои ги зачувала апликацијата (според поставките на програмерот), вклучувајќи потенцијално чувствителни податоци како што се контакти, пораки и фотографии."</string>
     <string name="device_admin_settings_title" msgid="4960761799560705902">"Поставки за администраторот на уредот"</string>
@@ -2333,7 +2333,7 @@
     <string name="sync_gmail" msgid="714886122098006477">"Gmail"</string>
     <string name="sync_calendar" msgid="9056527206714733735">"Календар"</string>
     <string name="sync_contacts" msgid="9174914394377828043">"Контакти"</string>
-    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Добре дојдовте на Google Sync!"</font>\n"Дозволен е пристап кон Google за синхронизирање на податоците за да се овозможи пристап кон вашите контакти, состаноци и повеќе, од каде и да сте."</string>
+    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Добре дојдовте на /e/ Sync!"</font>\n"Дозволен е пристап кон /e/ за синхронизирање на податоците за да се овозможи пристап кон вашите контакти, состаноци и повеќе, од каде и да сте."</string>
     <string name="header_application_sync_settings" msgid="6205903695598000286">"Поставки за синхронизација на апликации"</string>
     <string name="header_data_and_synchronization" msgid="5165024023936509896">"Податоци и синхронизација"</string>
     <string name="preference_change_password_title" msgid="8955581790270130056">"Смени лозинка"</string>
@@ -2422,8 +2422,8 @@
     <string name="data_usage_app_restrict_dialog" msgid="1466689968707308512">"Оваа карактеристика може да предизвика прекин на извршување на апликацијата што зависи од податоци во заднина, кога се достапни само мобилни мрежи.\n\nМоже да најдете посоодветни контроли за користење на податоците во подесувањата достапни во рамките на апликацијата."</string>
     <string name="data_usage_restrict_denied_dialog" msgid="55012417305745608">"Ограничување на интернет во заднина е можно само откога ќе поставите ограничување за мобилен интернет."</string>
     <string name="data_usage_auto_sync_on_dialog_title" msgid="2438617846762244389">"Вклучи авто синхрон. на подат.?"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"Сите промени што ги правите на вашите сметки на интернет автоматски ќе се копираат на вашиот таблет.\n\nНекои сметки може и автоматски да ги копираат сите промени направени на телефонот на интернет. Сметката на Google го прави тоа."</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"Сите промени што ќе ги направите на вашите сметки на интернет автоматски ќе се ископираат на телефонот.\n\nНекои сметки можеби автоматски ќе ги ископираат и промените што ги правите на телефонот на веб. Сметката на Google го прави тоа."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"Сите промени што ги правите на вашите сметки на интернет автоматски ќе се копираат на вашиот таблет.\n\nНекои сметки може и автоматски да ги копираат сите промени направени на телефонот на интернет. Сметката на /e/ го прави тоа."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"Сите промени што ќе ги направите на вашите сметки на интернет автоматски ќе се ископираат на телефонот.\n\nНекои сметки можеби автоматски ќе ги ископираат и промените што ги правите на телефонот на веб. Сметката на /e/ го прави тоа."</string>
     <string name="data_usage_auto_sync_off_dialog_title" msgid="9013139130490125793">"Исклучи авто синхрон. на подат.?"</string>
     <string name="data_usage_auto_sync_off_dialog" msgid="4025938250775413864">"Ова ќе ви заштеди интернет и батерија, но секоја сметка ќе треба да ја синхронизирате рачно за да се соберат најновите информации. Освен тоа, нема да добивате известувања за ажурирања."</string>
     <string name="data_usage_cycle_editor_title" msgid="1373797281540188533">"Датум на ресетирање циклус на употреба"</string>
@@ -3705,7 +3705,7 @@
     <string name="webview_disabled_for_user" msgid="1216426047631256825">"(оневозможено за корисникот <xliff:g id="USER">%s</xliff:g>)"</string>
     <string name="autofill_app" msgid="7338387238377914374">"Автоматско пополнување"</string>
     <string name="autofill_keywords" msgid="7485591824120812710">"автоматско, пополнување, автоматско пополнување"</string>
-    <string name="autofill_confirmation_message" msgid="2784869528908005194">"&lt;b&gt;Проверете дали е ова апликација на која ѝ верувате&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=„Автоматско пополнување на Google“&gt;%1$s&lt;/xliff:g&gt; го користи она што е на екранот за да утврди што може автоматски да се пополни."</string>
+    <string name="autofill_confirmation_message" msgid="2784869528908005194">"&lt;b&gt;Проверете дали е ова апликација на која ѝ верувате&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=„Автоматско пополнување на /e/“&gt;%1$s&lt;/xliff:g&gt; го користи она што е на екранот за да утврди што може автоматски да се пополни."</string>
     <string name="device_theme" msgid="4571803018917608588">"Тема на уредот"</string>
     <string name="default_theme" msgid="7085644992078579076">"Стандардно"</string>
     <string name="storage_manager_indicator" msgid="1516810749625915020">"„Управник со меморија“: <xliff:g id="STATUS">^1</xliff:g>"</string>
