--- a/res/values-ur/strings.xml
+++ b/res/values-ur/strings.xml
@@ -445,11 +445,11 @@
     <string name="crypt_keeper_warn_wipe" msgid="2738374897337991667">"وارننگ: غیر مقفل کیے جانے کی <xliff:g id="COUNT">^1</xliff:g> مزید ناکام کوششوں کے بعد آپ کا آلہ صاف کر دیا جائے گا!"</string>
     <string name="crypt_keeper_enter_password" msgid="2223340178473871064">"اپنا پاس ورڈ ٹائپ کریں"</string>
     <string name="crypt_keeper_failed_title" msgid="7133499413023075961">"مرموز کاری ناکام ہوگئی"</string>
-    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"‏مرموز کاری میں خلل پیدا ہوگیا تھا اور یہ مکمل نہیں ہوسکتی ہے۔ نتیجے کے طور پر، آپ کے ٹیبلٹ پر موجود ڈیٹا مزید قابل رسائی نہیں ہے۔\n \n اپنے ٹیبلٹ کا استعمال دوبارہ شروع کرنے کیلئے، آپ کو ایک فیکٹری ری سیٹ انجام دینے کی ضرورت ہے۔ ری سیٹ کے بعد اپنا ٹیبلٹ سیٹ اپ کرنے پر، آپ کو کوئی بھی ایسا ڈیٹا بحال کرنے کا ایک موقع ملے گا جس کا بیک اپ آپ کے Google اکاؤنٹ میں لیا گیا تھا۔"</string>
-    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"‏مرموز کاری میں خلل پیدا ہوگیا تھا اور یہ مکمل نہیں ہوسکتی ہے۔ نتیجے کے طور پر، آپ کے فون پر موجود ڈیٹا مزید قابل رسائی نہیں ہے۔\n\nاپنے فون کا استعمال دوبارہ شروع کرنے کیلئے، آپ کو ایک فیکٹری ری سیٹ انجام دینے کی ضرورت ہے۔ ری سیٹ کے بعد جب آپ اپنا فون سیٹ اپ کریں گے تو آپ کو کوئی بھی ایسا ڈیٹا بحال کرنے کا ایک موقع ملے گا جس کا بیک اپ آپ کے Google اکاؤنٹ میں لیا گیا تھا۔"</string>
+    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"‏مرموز کاری میں خلل پیدا ہوگیا تھا اور یہ مکمل نہیں ہوسکتی ہے۔ نتیجے کے طور پر، آپ کے ٹیبلٹ پر موجود ڈیٹا مزید قابل رسائی نہیں ہے۔\n \n اپنے ٹیبلٹ کا استعمال دوبارہ شروع کرنے کیلئے، آپ کو ایک فیکٹری ری سیٹ انجام دینے کی ضرورت ہے۔ ری سیٹ کے بعد اپنا ٹیبلٹ سیٹ اپ کرنے پر، آپ کو کوئی بھی ایسا ڈیٹا بحال کرنے کا ایک موقع ملے گا جس کا بیک اپ آپ کے /e/ اکاؤنٹ میں لیا گیا تھا۔"</string>
+    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"‏مرموز کاری میں خلل پیدا ہوگیا تھا اور یہ مکمل نہیں ہوسکتی ہے۔ نتیجے کے طور پر، آپ کے فون پر موجود ڈیٹا مزید قابل رسائی نہیں ہے۔\n\nاپنے فون کا استعمال دوبارہ شروع کرنے کیلئے، آپ کو ایک فیکٹری ری سیٹ انجام دینے کی ضرورت ہے۔ ری سیٹ کے بعد جب آپ اپنا فون سیٹ اپ کریں گے تو آپ کو کوئی بھی ایسا ڈیٹا بحال کرنے کا ایک موقع ملے گا جس کا بیک اپ آپ کے /e/ اکاؤنٹ میں لیا گیا تھا۔"</string>
     <string name="crypt_keeper_data_corrupt_title" msgid="8759119849089795751">"غیر مرموزکاری ناکام ہوگئی"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"‏آپ کا درج کردہ پاس ورڈ درست ہے لیکن بدقسمتی سے آپ کا ڈیٹا خراب ہے۔ ‎\n\n‎اپنا ٹیبلٹ دوبارہ استعمال کرنا شروع کرنے کیلئے آپ کو فیکٹری ری سیٹ انجام دینے کی ضرورت ہے۔ ری سیٹ کے بعد اپنا ٹیبلٹ سیٹ اپ کر لینے پر، آپ کو کوئی بھی ایسا ڈیٹا بحال کرنے کا ایک موقع ملے گا جس کا بیک اپ آپ کے Google اکاؤنٹ میں لیا گیا تھا۔"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"‏آپ کا درج کردہ پاس ورڈ درست ہے لیکن بدقسمتی سے آپ کا ڈیٹا خراب ہے۔ ‎\n\n‎اپنا فون دوبارہ استعمال کرنا شروع کرنے کیلئے آپ کو فیکٹری ری سیٹ انجام دینے کی ضرورت ہے۔ ری سیٹ کے بعد اپنا فون سیٹ اپ کر لینے پر، آپ کو کوئی بھی ایسا ڈیٹا بحال کرنے کا ایک موقع ملے گا جس کا بیک اپ آپ کے Google اکاؤنٹ میں لیا گیا تھا۔"</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"‏آپ کا درج کردہ پاس ورڈ درست ہے لیکن بدقسمتی سے آپ کا ڈیٹا خراب ہے۔ ‎\n\n‎اپنا ٹیبلٹ دوبارہ استعمال کرنا شروع کرنے کیلئے آپ کو فیکٹری ری سیٹ انجام دینے کی ضرورت ہے۔ ری سیٹ کے بعد اپنا ٹیبلٹ سیٹ اپ کر لینے پر، آپ کو کوئی بھی ایسا ڈیٹا بحال کرنے کا ایک موقع ملے گا جس کا بیک اپ آپ کے /e/ اکاؤنٹ میں لیا گیا تھا۔"</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"‏آپ کا درج کردہ پاس ورڈ درست ہے لیکن بدقسمتی سے آپ کا ڈیٹا خراب ہے۔ ‎\n\n‎اپنا فون دوبارہ استعمال کرنا شروع کرنے کیلئے آپ کو فیکٹری ری سیٹ انجام دینے کی ضرورت ہے۔ ری سیٹ کے بعد اپنا فون سیٹ اپ کر لینے پر، آپ کو کوئی بھی ایسا ڈیٹا بحال کرنے کا ایک موقع ملے گا جس کا بیک اپ آپ کے /e/ اکاؤنٹ میں لیا گیا تھا۔"</string>
     <string name="crypt_keeper_switch_input_method" msgid="4168332125223483198">"اندراج کا طریقہ سوئچ کریں"</string>
     <string name="suggested_lock_settings_title" msgid="8971630898700461034">"اسکرین کا قفل سیٹ کریں"</string>
     <string name="suggested_lock_settings_summary" msgid="8778462376012231110">"اپنے آلہ کا تحفظ کریں"</string>
@@ -1347,8 +1347,8 @@
     <string name="network_reset_not_available" msgid="7188610385577164676">"اس صارف کیلئے نیٹ ورک کو دوبارہ ترتیب دینا دستیاب نہیں ہے"</string>
     <string name="reset_network_complete_toast" msgid="787829973559541880">"نیٹ ورک کی ترتیبات کو دوبارہ ترتیب دیا گیا ہے"</string>
     <string name="master_clear_title" msgid="3531267871084279512">"تمام ڈیٹا حذف کریں (فیکٹری ری سیٹ)"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"‏یہ آپ کے ٹیبلٹ کے "<b>"داخلی اسٹوریج"</b>" سے سبھی ڈیٹا کو حذف کر دے گا، بشمول:\n\n"<li>"آپ کا Google اکاؤنٹ"</li>\n<li>"سسٹم اور ایپ ڈیٹا اور ترتیبات"</li>\n<li>"ڈاؤن لوڈ کردہ ایپس"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"‏یہ آپ کے فون کے "<b>"داخلی اسٹوریج"</b>" سے سبھی ڈیٹا کو حذف کر دے گا، بشمول:\n\n"<li>"آپ کا Google اکاؤنٹ"</li>\n<li>"سسٹم اور ایپ ڈیٹا اور ترتیبات"</li>\n<li>"ڈاؤن لوڈ کردہ ایپس"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"‏یہ آپ کے ٹیبلٹ کے "<b>"داخلی اسٹوریج"</b>" سے سبھی ڈیٹا کو حذف کر دے گا، بشمول:\n\n"<li>"آپ کا /e/ اکاؤنٹ"</li>\n<li>"سسٹم اور ایپ ڈیٹا اور ترتیبات"</li>\n<li>"ڈاؤن لوڈ کردہ ایپس"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"‏یہ آپ کے فون کے "<b>"داخلی اسٹوریج"</b>" سے سبھی ڈیٹا کو حذف کر دے گا، بشمول:\n\n"<li>"آپ کا /e/ اکاؤنٹ"</li>\n<li>"سسٹم اور ایپ ڈیٹا اور ترتیبات"</li>\n<li>"ڈاؤن لوڈ کردہ ایپس"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"آپ فی الحال مندرجہ ذیل اکاؤنٹس میں سائن ان ہیں:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"اس آلہ پر دوسرے صارفین موجود ہیں۔\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"موسیقی"</li>\n<li>"تصاویر"</li>\n<li>"صارف کا دیگر ڈیٹا"</li></string>
@@ -1433,7 +1433,7 @@
     <string name="location_scanning_bluetooth_always_scanning_title" msgid="5444989508204520019">"بلوٹوتھ اسکیننگ"</string>
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="8602726521250591852">"سسٹم ایپس اور سروسز کو کسی بھی وقت بلوٹوتھ آلات کا پتا لگانے کی اجازت دے کر مقام کو بہتر بنائیں۔"</string>
     <string name="location_network_based" msgid="9134175479520582215">"‏Wi‑Fi اور‎ موبائل نیٹ ورک مقام"</string>
-    <string name="location_neighborhood_level" msgid="5141318121229984788">"‏اپنے مقام کا تیزی سے اندازہ لگانے کیلئے ایپس کو Google کی مقام کی سروس کا استعمال کرنے دیں۔ گمنام مقام کا ڈیٹا جمع کیا جائے گا اور Google کو بھیجا جائے گا۔"</string>
+    <string name="location_neighborhood_level" msgid="5141318121229984788">"‏اپنے مقام کا تیزی سے اندازہ لگانے کیلئے ایپس کو /e/ کی مقام کی سروس کا استعمال کرنے دیں۔ گمنام مقام کا ڈیٹا جمع کیا جائے گا اور /e/ کو بھیجا جائے گا۔"</string>
     <string name="location_neighborhood_level_wifi" msgid="4234820941954812210">"‏Wi‑Fi کے ذریعہ مقام کا تعین کیا گیا"</string>
     <string name="location_gps" msgid="8392461023569708478">"‏GPS سیٹلائٹس"</string>
     <string name="location_street_level" product="tablet" msgid="1669562198260860802">"‏ایپ کو اپنے مقام کا درست تعین کرنے کیلئے اپنے ٹیبلیٹ پر موجود GPS کا استعمال کرنے کی اجازت دیں"</string>
@@ -1441,8 +1441,8 @@
     <string name="assisted_gps" msgid="4649317129586736885">"‏تعاون یافتہ GPS استعمال کریں"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"‏GPS کی مدد کرنے کیلئے سرور استعمال کریں (نیٹ ورک کا استعمال کم کرنے کیلئے غیر نشان زد کریں)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"‏GPS کی مدد کرنے کیلئے سرور استعمال کریں (GPS کی کارکردگی بہتر بنانے کیلئے غیر نشان زد کریں)"</string>
-    <string name="use_location_title" msgid="5206937465504979977">"‏مقام اور Google تلاش"</string>
-    <string name="use_location_summary" msgid="3978805802386162520">"‏تلاش نتائج اور دیگر سروسز بہتر بنانے کیلئے Google کو آپ کا مقام استعمال کرنے دیں"</string>
+    <string name="use_location_title" msgid="5206937465504979977">"‏مقام اور /e/ تلاش"</string>
+    <string name="use_location_summary" msgid="3978805802386162520">"‏تلاش نتائج اور دیگر سروسز بہتر بنانے کیلئے /e/ کو آپ کا مقام استعمال کرنے دیں"</string>
     <string name="location_access_title" msgid="7064108942964081243">"میرے مقام تک رسائی"</string>
     <string name="location_access_summary" msgid="69031404093194341">"جن ایپس نے آپ کی اجازت طلب کی ہے انہیں اپنے مقام کی معلومات استعمال کرنے کی اجازت دیں"</string>
     <string name="location_sources_heading" msgid="1278732419851088319">"مقام کے مآخذ"</string>
@@ -2238,7 +2238,7 @@
     <string name="backup_section_title" msgid="7952232291452882740">"بیک اپ لیں اور بحال کریں"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"ذاتی ڈیٹا"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"میرے ڈیٹا کا بیک اپ لیں"</string>
-    <string name="backup_data_summary" msgid="708773323451655666">"‏ایپ ڈیٹا، Wi‑Fi پاس ورڈز اور دیگر ترتیبات کا Google سرورز پر بیک اپ لیں"</string>
+    <string name="backup_data_summary" msgid="708773323451655666">"‏ایپ ڈیٹا، Wi‑Fi پاس ورڈز اور دیگر ترتیبات کا /e/ سرورز پر بیک اپ لیں"</string>
     <string name="backup_configure_account_title" msgid="3790872965773196615">"بیک اپ اکاؤنٹ"</string>
     <string name="include_app_data_title" msgid="2829970132260278394">"ایپ کا ڈیٹا شامل کریں"</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"خود کار طور بحال کریں"</string>
@@ -2246,7 +2246,7 @@
     <string name="backup_inactive_title" msgid="685838037986644604">"بیک اپ سروس فعال نہیں ہے"</string>
     <string name="backup_configure_account_default_summary" msgid="2436933224764745553">"فی الحال کوئی بھی اکاؤنٹ بیک اپ لیا گیا ڈیٹا اسٹور نہیں کر رہا ہے"</string>
     <string name="backup_erase_dialog_title" msgid="1027640829482174106"></string>
-    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"‏اپنے Wi‑Fi پاس ورڈز، بُک مارکس، دوسری ترتیبات اور ایپ کے ڈیٹا کا بیک اپ لینا بند کریں، ساتھ ہی Google سرورز پر موجود سبھی کاپیاں حذف کریں۔"</string>
+    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"‏اپنے Wi‑Fi پاس ورڈز، بُک مارکس، دوسری ترتیبات اور ایپ کے ڈیٹا کا بیک اپ لینا بند کریں، ساتھ ہی /e/ سرورز پر موجود سبھی کاپیاں حذف کریں۔"</string>
     <string name="fullbackup_erase_dialog_message" msgid="694766389396659626">"‏آلہ کے ڈیٹا (جیسے کہ Wi-Fi پاس ورڈز اور کال کی سرگزشت) اور ایپ ڈیٹا (جیسے کہ ایپس کی جانب سے اسٹور کردہ ترتیبات اور فائلز) کا بیک اپ لینا بند کریں، نیز ریموٹ سرورز پر موجود سبھی کاپیاں مٹائیں؟"</string>
     <string name="fullbackup_data_summary" msgid="960850365007767734">"‏خودکار طریقے سے دور سے آلہ کے ڈیٹا (جیسے کہ Wi-Fi پاس ورڈز اور کال کی سرگزشت) اور ایپ ڈیٹا (جیسے کہ ایپس کی جانب سے اسٹور کردہ ترتیبات اور فائلز) کا بیک اپ لیں۔\n\nجب آپ خودکار بیک اپ آن کرتے ہیں تو آلہ اور ایپ کا ڈیٹا وقفہ وقفہ پر دور سے محفوظ کیا جاتا ہے۔ ممکنہ طور پر حساس ڈیٹا مثلاً رابطے، پیغامات اور تصاویر سمیت ایپ ڈیٹا کوئی بھی ایسا ڈیٹا ہو سکتا ہے جسے کسی ایپ نے (ڈیولپر ترتیبات کی بنیاد پر) محفوظ کیا ہو۔"</string>
     <string name="device_admin_settings_title" msgid="4960761799560705902">"آلہ کے منتظم کی ترتیبات"</string>
@@ -2333,7 +2333,7 @@
     <string name="sync_gmail" msgid="714886122098006477">"Gmail"</string>
     <string name="sync_calendar" msgid="9056527206714733735">"کیلنڈر"</string>
     <string name="sync_contacts" msgid="9174914394377828043">"رابطے"</string>
-    <string name="sync_plug" msgid="3905078969081888738">"‏"<font fgcolor="#ffffffff">"Google مطابقت پذیری میں خوش آمدید!"</font>" \nآپ جہاں کہیں بھی ہوں وہاں سے آپ کے رابطوں، مقررہ ملاقاتوں، اور مزید بہت کچھ تک رسائی کی اجازت دینے کیلئے ڈیٹا کو مطابقت پذیر بنانے کے واسطے Google کا ایک طریقہ۔"</string>
+    <string name="sync_plug" msgid="3905078969081888738">"‏"<font fgcolor="#ffffffff">"/e/ مطابقت پذیری میں خوش آمدید!"</font>" \nآپ جہاں کہیں بھی ہوں وہاں سے آپ کے رابطوں، مقررہ ملاقاتوں، اور مزید بہت کچھ تک رسائی کی اجازت دینے کیلئے ڈیٹا کو مطابقت پذیر بنانے کے واسطے /e/ کا ایک طریقہ۔"</string>
     <string name="header_application_sync_settings" msgid="6205903695598000286">"ایپ کی مطابقت پذیری کی ترتیبات"</string>
     <string name="header_data_and_synchronization" msgid="5165024023936509896">"ڈیٹا کی مطابقت پذیری"</string>
     <string name="preference_change_password_title" msgid="8955581790270130056">"پاس ورڈ تبدیل کریں"</string>
@@ -2422,8 +2422,8 @@
     <string name="data_usage_app_restrict_dialog" msgid="1466689968707308512">"اس خصوصیت کی وجہ سے پس منظر کے ڈیٹا پر انحصار کرنے والی کوئی ایپ صرف موبائل نیٹ ورکس دستیاب ہونے پر کام کرنا بند کرسکتی ہے۔\n\nآپ مزید مناسب ڈیٹا کے استعمال کے کنٹرولز ایپ میں ہی دستیاب ترتیبات میں تلاش کرسکتے ہیں۔"</string>
     <string name="data_usage_restrict_denied_dialog" msgid="55012417305745608">"پس منظر ڈیٹا کو محدود کرنا صرف اسی وقت ممکن ہے جب آپ نے موبائل ڈيٹا کی ایک حد مقرر کی ہو۔"</string>
     <string name="data_usage_auto_sync_on_dialog_title" msgid="2438617846762244389">"ڈیٹا آٹو سنک کریں کو آن کریں؟"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"‏آپ ویب پر اپنے اکاؤنٹس میں جو بھی تبدیلیاں کرتے ہیں وہ آپ کے ٹیبلیٹ میں خود بخود کاپی ہو جائیں گی۔\n\nکچھ اکاؤنٹس ایسی تبدیلیاں جو آپ ٹیبلیٹ پر کرتے ہیں انہیں خود بخود ویب پر بھی کاپی کر سکتے ہیں۔ Google اکاؤنٹ اس طریقے سے کام کرتا ہے۔"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"‏آپ ویب پر اپنے اکاؤنٹس میں جو بھی تبدیلیاں کرتے ہیں وہ آپ کے فون میں خود بخود کاپی ہو جائیں گی۔\n\nکچھ اکاؤنٹس ایسی تبدیلیاں جو آپ فون پر کرتے ہیں انہیں خود بخود ویب پر بھی کاپی کر سکتے ہیں۔ Google اکاؤنٹ اس طریقے سے کام کرتا ہے۔"</string>
+    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"‏آپ ویب پر اپنے اکاؤنٹس میں جو بھی تبدیلیاں کرتے ہیں وہ آپ کے ٹیبلیٹ میں خود بخود کاپی ہو جائیں گی۔\n\nکچھ اکاؤنٹس ایسی تبدیلیاں جو آپ ٹیبلیٹ پر کرتے ہیں انہیں خود بخود ویب پر بھی کاپی کر سکتے ہیں۔ /e/ اکاؤنٹ اس طریقے سے کام کرتا ہے۔"</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"‏آپ ویب پر اپنے اکاؤنٹس میں جو بھی تبدیلیاں کرتے ہیں وہ آپ کے فون میں خود بخود کاپی ہو جائیں گی۔\n\nکچھ اکاؤنٹس ایسی تبدیلیاں جو آپ فون پر کرتے ہیں انہیں خود بخود ویب پر بھی کاپی کر سکتے ہیں۔ /e/ اکاؤنٹ اس طریقے سے کام کرتا ہے۔"</string>
     <string name="data_usage_auto_sync_off_dialog_title" msgid="9013139130490125793">"ڈیٹا آٹو سنک کریں کو آف کریں؟"</string>
     <string name="data_usage_auto_sync_off_dialog" msgid="4025938250775413864">"یہ ڈیٹا اور بیٹری کے استعمال کی بچت کرے گا، لیکن آپ کو حالیہ معلومات اکٹھا کرنے کیلئے ہر اکاؤنٹ کو دستی طور پر مطابقت پذیر بنانا ہوگا۔ اور اپ ڈیٹس ہونے کے وقت آپ کو اطلاعات موصول نہیں ہوں گی۔"</string>
     <string name="data_usage_cycle_editor_title" msgid="1373797281540188533">"استعمال کے سائیکل کو دوبارہ ترتیب دینے کی تاریخ"</string>
@@ -3703,7 +3703,7 @@
     <string name="webview_disabled_for_user" msgid="1216426047631256825">"(صارف کے لیے غیر فعال ہوگیا <xliff:g id="USER">%s</xliff:g>)"</string>
     <string name="autofill_app" msgid="7338387238377914374">"آٹو فل سروس"</string>
     <string name="autofill_keywords" msgid="7485591824120812710">"آٹو، فل، آٹو فل"</string>
-    <string name="autofill_confirmation_message" msgid="2784869528908005194">"‏&lt;b&gt;یہ یقینی بنائیں کہ آپ کو اس ایپ پر اعتماد ہے&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=Google Autofill&gt;%1$s&lt;/xliff:g&gt;  آٹو فل کی جانے والی چیزوں کی تعیین کرنے کیلئے آپ کی اسکرین پر موجود چیزوں کو استعمال کرتا ہے۔"</string>
+    <string name="autofill_confirmation_message" msgid="2784869528908005194">"‏&lt;b&gt;یہ یقینی بنائیں کہ آپ کو اس ایپ پر اعتماد ہے&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=/e/ Autofill&gt;%1$s&lt;/xliff:g&gt;  آٹو فل کی جانے والی چیزوں کی تعیین کرنے کیلئے آپ کی اسکرین پر موجود چیزوں کو استعمال کرتا ہے۔"</string>
     <string name="device_theme" msgid="4571803018917608588">"آلہ کا تھیم"</string>
     <string name="default_theme" msgid="7085644992078579076">"ڈیفالٹ"</string>
     <string name="storage_manager_indicator" msgid="1516810749625915020">"اسٹوریج مینیجر: <xliff:g id="STATUS">^1</xliff:g>"</string>
