--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -445,11 +445,11 @@
     <string name="crypt_keeper_warn_wipe" msgid="2738374897337991667">"Cảnh báo: Thiết bị của bạn sẽ bị xóa sau <xliff:g id="COUNT">^1</xliff:g> lần mở khóa không thành công nữa!"</string>
     <string name="crypt_keeper_enter_password" msgid="2223340178473871064">"Nhập mật khẩu của bạn"</string>
     <string name="crypt_keeper_failed_title" msgid="7133499413023075961">"Mã hóa không thành công"</string>
-    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"Quá trình mã hóa đã bị gián đoạn và không thể hoàn tất. Do đó, dữ liệu trên máy tính bảng của bạn không còn có thể truy cập được. \n\n Để tiếp tục sử dụng máy tính bảng của mình, bạn cần đặt lại về cài đặt ban đầu. Khi bạn thiết lập máy tính bảng sau khi đặt lại, bạn sẽ có cơ hội khôi phục mọi dữ liệu được sao lưu vào Tài khoản Google của mình."</string>
-    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"Quá trình mã hóa bị gián đoạn và không thể hoàn tất. Do đó, dữ liệu trên điện thoại của bạn không còn có thể truy cập được. \n\nĐể tiếp tục sử dụng điện thoại của mình, bạn cần đặt lại về cài đặt ban đầu. Khi bạn thiết lập điện thoại sau khi đặt lại, bạn sẽ có cơ hội khôi phục mọi dữ liệu được sao lưu vào Tài khoản Google của mình."</string>
+    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"Quá trình mã hóa đã bị gián đoạn và không thể hoàn tất. Do đó, dữ liệu trên máy tính bảng của bạn không còn có thể truy cập được. \n\n Để tiếp tục sử dụng máy tính bảng của mình, bạn cần đặt lại về cài đặt ban đầu. Khi bạn thiết lập máy tính bảng sau khi đặt lại, bạn sẽ có cơ hội khôi phục mọi dữ liệu được sao lưu vào Tài khoản /e/ của mình."</string>
+    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"Quá trình mã hóa bị gián đoạn và không thể hoàn tất. Do đó, dữ liệu trên điện thoại của bạn không còn có thể truy cập được. \n\nĐể tiếp tục sử dụng điện thoại của mình, bạn cần đặt lại về cài đặt ban đầu. Khi bạn thiết lập điện thoại sau khi đặt lại, bạn sẽ có cơ hội khôi phục mọi dữ liệu được sao lưu vào Tài khoản /e/ của mình."</string>
     <string name="crypt_keeper_data_corrupt_title" msgid="8759119849089795751">"Giải mã không thành công"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"Mật khẩu bạn nhập đúng nhưng rất tiếc dữ liệu của bạn bị hỏng. \n\nĐể tiếp tục sử dụng máy tính bảng của mình, bạn cần khôi phục cài đặt gốc. Khi thiết lập máy tính bảng sau khi đặt lại, bạn sẽ có cơ hội khôi phục mọi dữ liệu đã được sao lưu vào Tài khoản Google của mình."</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"Mật khẩu bạn nhập đúng nhưng rất tiếc dữ liệu của bạn bị hỏng. \n\nĐể tiếp tục sử dụng điện thoại của mình, bạn cần khôi phục cài đặt gốc. Khi thiết lập điện thoại sau khi đặt lại, bạn sẽ có cơ hội khôi phục mọi dữ liệu đã được sao lưu vào Tài khoản Google của mình."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"Mật khẩu bạn nhập đúng nhưng rất tiếc dữ liệu của bạn bị hỏng. \n\nĐể tiếp tục sử dụng máy tính bảng của mình, bạn cần khôi phục cài đặt gốc. Khi thiết lập máy tính bảng sau khi đặt lại, bạn sẽ có cơ hội khôi phục mọi dữ liệu đã được sao lưu vào Tài khoản /e/ của mình."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"Mật khẩu bạn nhập đúng nhưng rất tiếc dữ liệu của bạn bị hỏng. \n\nĐể tiếp tục sử dụng điện thoại của mình, bạn cần khôi phục cài đặt gốc. Khi thiết lập điện thoại sau khi đặt lại, bạn sẽ có cơ hội khôi phục mọi dữ liệu đã được sao lưu vào Tài khoản /e/ của mình."</string>
     <string name="crypt_keeper_switch_input_method" msgid="4168332125223483198">"Chuyển phương thức nhập"</string>
     <string name="suggested_lock_settings_title" msgid="8971630898700461034">"Đặt khóa màn hình"</string>
     <string name="suggested_lock_settings_summary" msgid="8778462376012231110">"Bảo vệ thiết bị của bạn"</string>
@@ -1347,8 +1347,8 @@
     <string name="network_reset_not_available" msgid="7188610385577164676">"Đặt lại mạng không khả dụng cho người dùng này"</string>
     <string name="reset_network_complete_toast" msgid="787829973559541880">"Cài đặt mạng đã được đặt lại"</string>
     <string name="master_clear_title" msgid="3531267871084279512">"Xóa mọi dữ liệu (đặt lại thiết bị)"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Việc này sẽ xóa tất cả dữ liệu từ "<b>"bộ nhớ trong"</b>" của máy tính bảng, bao gồm:\n\n"<li>"Tài khoản Google của bạn"</li>\n<li>"Dữ liệu và cài đặt của hệ thống và ứng dụng"</li>\n<li>"Ứng dụng đã tải xuống"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Việc này sẽ xóa tất cả dữ liệu từ "<b>"bộ nhớ trong"</b>" của điện thoại, bao gồm:\n\n"<li>"Tài khoản Google của bạn"</li>\n<li>"Dữ liệu và cài đặt của hệ thống và ứng dụng"</li>\n<li>"Ứng dụng đã tải xuống"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Việc này sẽ xóa tất cả dữ liệu từ "<b>"bộ nhớ trong"</b>" của máy tính bảng, bao gồm:\n\n"<li>"Tài khoản /e/ của bạn"</li>\n<li>"Dữ liệu và cài đặt của hệ thống và ứng dụng"</li>\n<li>"Ứng dụng đã tải xuống"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Việc này sẽ xóa tất cả dữ liệu từ "<b>"bộ nhớ trong"</b>" của điện thoại, bao gồm:\n\n"<li>"Tài khoản /e/ của bạn"</li>\n<li>"Dữ liệu và cài đặt của hệ thống và ứng dụng"</li>\n<li>"Ứng dụng đã tải xuống"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"Bạn hiện đã đăng nhập vào các tài khoản sau đây:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"Có người dùng khác trên thiết bị này.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"Nhạc"</li>\n<li>"Ảnh"</li>\n<li>"Dữ liệu người dùng khác"</li></string>
@@ -1433,7 +1433,7 @@
     <string name="location_scanning_bluetooth_always_scanning_title" msgid="5444989508204520019">"Quét Bluetooth"</string>
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="8602726521250591852">"Cải thiện thông tin vị trí bằng cách cho phép các ứng dụng và dịch vụ hệ thống phát hiện thiết bị Bluetooth bất cứ lúc nào."</string>
     <string name="location_network_based" msgid="9134175479520582215">"Vị trí Wi‑Fi và mạng di động"</string>
-    <string name="location_neighborhood_level" msgid="5141318121229984788">"Cho phép ứng dụng dùng DV vị trí của Google để ước đoán vị trí nhanh hơn. Dữ liệu vị trí ẩn danh sẽ được thu thập và gửi tới Google."</string>
+    <string name="location_neighborhood_level" msgid="5141318121229984788">"Cho phép ứng dụng dùng DV vị trí của /e/ để ước đoán vị trí nhanh hơn. Dữ liệu vị trí ẩn danh sẽ được thu thập và gửi tới /e/."</string>
     <string name="location_neighborhood_level_wifi" msgid="4234820941954812210">"Vị trí được xác định bằng Wi‑Fi"</string>
     <string name="location_gps" msgid="8392461023569708478">"Vệ tinh GPS"</string>
     <string name="location_street_level" product="tablet" msgid="1669562198260860802">"Cho phép ứng dụng sử dụng GPS trên máy tính bảng để xác định vị trí của bạn"</string>
@@ -1441,8 +1441,8 @@
     <string name="assisted_gps" msgid="4649317129586736885">"Sử dụng GPS được hỗ trợ"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"Sử dụng máy chủ đề hỗ trợ GPS (bỏ chọn để giảm việc sử dụng mạng)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"Sử dụng máy chủ để hỗ trợ GPS (bỏ chọn để cải thiện hiệu suất GPS)"</string>
-    <string name="use_location_title" msgid="5206937465504979977">"V.trí &amp; T.kiếm trên Google"</string>
-    <string name="use_location_summary" msgid="3978805802386162520">"Cho phép Google sử dụng vị trí của bạn để cải tiến kết quả tìm kiếm và các dịch vụ khác"</string>
+    <string name="use_location_title" msgid="5206937465504979977">"V.trí &amp; T.kiếm trên /e/"</string>
+    <string name="use_location_summary" msgid="3978805802386162520">"Cho phép /e/ sử dụng vị trí của bạn để cải tiến kết quả tìm kiếm và các dịch vụ khác"</string>
     <string name="location_access_title" msgid="7064108942964081243">"Quyền truy cập vào thông tin vị trí của tôi"</string>
     <string name="location_access_summary" msgid="69031404093194341">"Cho phép các ứng dụng đã yêu cầu sự cho phép của bạn sử dụng thông tin vị trí của bạn"</string>
     <string name="location_sources_heading" msgid="1278732419851088319">"Nguồn thông tin vị trí"</string>
@@ -2238,7 +2238,7 @@
     <string name="backup_section_title" msgid="7952232291452882740">"Sao lưu &amp; khôi phục"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"Dữ liệu cá nhân"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"Sao lưu dữ liệu của tôi"</string>
-    <string name="backup_data_summary" msgid="708773323451655666">"Sao lưu dữ liệu ứng dụng, mật khẩu Wi-Fi và các cài đặt khác vào máy chủ Google"</string>
+    <string name="backup_data_summary" msgid="708773323451655666">"Sao lưu dữ liệu ứng dụng, mật khẩu Wi-Fi và các cài đặt khác vào máy chủ /e/"</string>
     <string name="backup_configure_account_title" msgid="3790872965773196615">"Tài khoản sao lưu"</string>
     <string name="include_app_data_title" msgid="2829970132260278394">"Bao gồm dữ liệu ứng dụng"</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"Tự động khôi phục"</string>
@@ -2246,7 +2246,7 @@
     <string name="backup_inactive_title" msgid="685838037986644604">"Dịch vụ sao lưu không hoạt động"</string>
     <string name="backup_configure_account_default_summary" msgid="2436933224764745553">"Hiện không có tài khoản nào lưu trữ dữ liệu được sao lưu"</string>
     <string name="backup_erase_dialog_title" msgid="1027640829482174106"></string>
-    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"Dừng sao lưu mật khẩu Wi-Fi, dấu trang, các cài đặt khác và dữ liệu ứng dụng của bạn đồng thời xóa tất cả bản sao trên các máy chủ Google?"</string>
+    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"Dừng sao lưu mật khẩu Wi-Fi, dấu trang, các cài đặt khác và dữ liệu ứng dụng của bạn đồng thời xóa tất cả bản sao trên các máy chủ /e/?"</string>
     <string name="fullbackup_erase_dialog_message" msgid="694766389396659626">"Dừng sao lưu dữ liệu thiết bị (chẳng hạn như mật khẩu Wi-Fi và lịch sử cuộc gọi) và dữ liệu ứng dụng (chẳng hạn như cài đặt và tệp được ứng dụng lưu trữ), đồng thời xóa tất cả các bản sao trên máy chủ từ xa?"</string>
     <string name="fullbackup_data_summary" msgid="960850365007767734">"Tự động sao lưu từ xa dữ liệu của thiết bị (chẳng hạn như mật khẩu Wi-Fi và lịch sử cuộc gọi) cũng như dữ liệu ứng dụng (chẳng hạn như các cài đặt và các tệp được ứng dụng lưu trữ).\n\nKhi bạn bật tính năng sao lưu tự động, dữ liệu ứng dụng và thiết bị được lưu từ xa theo định kỳ. Dữ liệu ứng dụng có thể là bất kỳ dữ liệu nào mà ứng dụng đã lưu (dựa trên cài đặt của nhà phát triển), bao gồm dữ liệu nhạy cảm có thể có như danh bạ, tin nhắn và ảnh."</string>
     <string name="device_admin_settings_title" msgid="4960761799560705902">"Cài đặt quản trị viên thiết bị"</string>
@@ -2333,7 +2333,7 @@
     <string name="sync_gmail" msgid="714886122098006477">"Gmail"</string>
     <string name="sync_calendar" msgid="9056527206714733735">"Lịch"</string>
     <string name="sync_contacts" msgid="9174914394377828043">"Danh bạ"</string>
-    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Chào mừng bạn đến với Google sync!"</font>\n"Một giải pháp đồng bộ hóa dữ liệu của Google cho phép quyền truy cập danh bạ, các cuộc hẹn và hơn thế nữa cho dù bạn ở đâu."</string>
+    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Chào mừng bạn đến với /e/ sync!"</font>\n"Một giải pháp đồng bộ hóa dữ liệu của /e/ cho phép quyền truy cập danh bạ, các cuộc hẹn và hơn thế nữa cho dù bạn ở đâu."</string>
     <string name="header_application_sync_settings" msgid="6205903695598000286">"Cài đặt đồng bộ hóa ứng dụng"</string>
     <string name="header_data_and_synchronization" msgid="5165024023936509896">"Dữ liệu &amp; đồng bộ hóa"</string>
     <string name="preference_change_password_title" msgid="8955581790270130056">"Thay đổi mật khẩu"</string>
@@ -2422,8 +2422,8 @@
     <string name="data_usage_app_restrict_dialog" msgid="1466689968707308512">"Tính năng này có thể khiến ứng dụng phụ thuộc vào dữ liệu nền ngừng hoạt động chỉ khi có mạng di động.\n\nBạn có thể tìm thấy biện pháp kiểm soát mức sử dụng dữ liệu thích hợp khác trong các cài đặt có trong ứng dụng."</string>
     <string name="data_usage_restrict_denied_dialog" msgid="55012417305745608">"Chỉ có thể giới hạn dữ liệu nền khi bạn đặt giới hạn dữ liệu di động."</string>
     <string name="data_usage_auto_sync_on_dialog_title" msgid="2438617846762244389">"Bật tính năng tự động đồng bộ hóa dữ liệu?"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"Mọi thay đổi bạn thực hiện đối với các tài khoản trên web sẽ được tự động sao chép sang máy tính bảng của bạn.\n\nMột số tài khoản cũng có thể tự động đồng bộ hóa lên web mọi thay đổi bạn thực hiện trên máy tính bảng. Tài khoản Google hoạt động theo cách này."</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"Mọi thay đổi bạn thực hiện đối với các tài khoản trên web sẽ được tự động sao chép sang điện thoại của bạn.\n\nMột số tài khoản cũng có thể tự động đồng bộ hóa lên web mọi thay đổi bạn thực hiện trên điện thoại. Tài khoản Google hoạt động theo cách này."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"Mọi thay đổi bạn thực hiện đối với các tài khoản trên web sẽ được tự động sao chép sang máy tính bảng của bạn.\n\nMột số tài khoản cũng có thể tự động đồng bộ hóa lên web mọi thay đổi bạn thực hiện trên máy tính bảng. Tài khoản /e/ hoạt động theo cách này."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"Mọi thay đổi bạn thực hiện đối với các tài khoản trên web sẽ được tự động sao chép sang điện thoại của bạn.\n\nMột số tài khoản cũng có thể tự động đồng bộ hóa lên web mọi thay đổi bạn thực hiện trên điện thoại. Tài khoản /e/ hoạt động theo cách này."</string>
     <string name="data_usage_auto_sync_off_dialog_title" msgid="9013139130490125793">"Tắt tính năng tự động đồng bộ hóa dữ liệu?"</string>
     <string name="data_usage_auto_sync_off_dialog" msgid="4025938250775413864">"Việc này sẽ bảo toàn mức sử dụng dữ liệu và pin, tuy nhiên, bạn sẽ cần phải đồng bộ hóa từng tài khoản theo cách thủ công để thu thập thông tin gần đây. Ngoài ra, bạn sẽ không nhận được thông báo khi có bản cập nhật."</string>
     <string name="data_usage_cycle_editor_title" msgid="1373797281540188533">"Ngày đặt lại chu kỳ sử dụng"</string>
@@ -3705,7 +3705,7 @@
     <string name="webview_disabled_for_user" msgid="1216426047631256825">"(đã tắt cho người dùng <xliff:g id="USER">%s</xliff:g>)"</string>
     <string name="autofill_app" msgid="7338387238377914374">"Dịch vụ tự động điền"</string>
     <string name="autofill_keywords" msgid="7485591824120812710">"tự động, điền, tự động điền"</string>
-    <string name="autofill_confirmation_message" msgid="2784869528908005194">"&lt;b&gt;Hãy đảm bảo bạn tin tưởng ứng dụng này&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=Google Autofill&gt;%1$s&lt;/xliff:g&gt; sử dụng nội dung trên màn hình của bạn để xác định nội dung nào có thể được tự động điền."</string>
+    <string name="autofill_confirmation_message" msgid="2784869528908005194">"&lt;b&gt;Hãy đảm bảo bạn tin tưởng ứng dụng này&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=/e/ Autofill&gt;%1$s&lt;/xliff:g&gt; sử dụng nội dung trên màn hình của bạn để xác định nội dung nào có thể được tự động điền."</string>
     <string name="device_theme" msgid="4571803018917608588">"Chủ đề thiết bị"</string>
     <string name="default_theme" msgid="7085644992078579076">"Mặc định"</string>
     <string name="storage_manager_indicator" msgid="1516810749625915020">"Trình quản lý bộ nhớ: <xliff:g id="STATUS">^1</xliff:g>"</string>
