--- a/res/values-pt-rPT/strings.xml
+++ b/res/values-pt-rPT/strings.xml
@@ -445,11 +445,11 @@
     <string name="crypt_keeper_warn_wipe" msgid="2738374897337991667">"Aviso: O seu dispositivo será apagado após mais <xliff:g id="COUNT">^1</xliff:g> tentativa(s) falhada(s) de desbloqueio!"</string>
     <string name="crypt_keeper_enter_password" msgid="2223340178473871064">"Introduza a palavra-passe"</string>
     <string name="crypt_keeper_failed_title" msgid="7133499413023075961">"Encriptação sem êxito"</string>
-    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"A encriptação foi interrompida e não é possível concluí-la. Como resultado, os dados no tablet já não estão acessíveis. \n\nPara voltar a utilizar o tablet, é necessário efetuar uma reposição para os valores de fábrica. Quando configurar o tablet após a reposição, poderá restaurar todos os dados dos quais tenha cópias de segurança na Conta Google."</string>
-    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"A encriptação foi interrompida e não é possível concluí-la. Como resultado, os dados no seu telemóvel já não estão acessíveis. \n\nPara voltar a utilizar o telemóvel, é necessário efetuar uma reposição para os valores de fábrica. Quando configurar o telemóvel após a reposição, poderá restaurar todos os dados dos quais tenha cópias de segurança na sua Conta Google."</string>
+    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"A encriptação foi interrompida e não é possível concluí-la. Como resultado, os dados no tablet já não estão acessíveis. \n\nPara voltar a utilizar o tablet, é necessário efetuar uma reposição para os valores de fábrica. Quando configurar o tablet após a reposição, poderá restaurar todos os dados dos quais tenha cópias de segurança na Conta /e/."</string>
+    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"A encriptação foi interrompida e não é possível concluí-la. Como resultado, os dados no seu telemóvel já não estão acessíveis. \n\nPara voltar a utilizar o telemóvel, é necessário efetuar uma reposição para os valores de fábrica. Quando configurar o telemóvel após a reposição, poderá restaurar todos os dados dos quais tenha cópias de segurança na sua Conta /e/."</string>
     <string name="crypt_keeper_data_corrupt_title" msgid="8759119849089795751">"Desencriptação sem êxito"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"A palavra-passe introduzida está correta mas, infelizmente, os dados estão corrompidos. \n\nPara continuar a utilizar o tablet, é necessário efetuar uma reposição de fábrica. Quando configurar o tablet após a reposição, terá a oportunidade de restaurar quaisquer dados da cópia de segurança da sua Conta Google."</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"A palavra-passe introduzida está correta mas, infelizmente, os dados estão corrompidos. \n\nPara continuar a utilizar o telemóvel, é necessário efetuar uma reposição de fábrica. Quando configurar o telemóvel após a reposição, terá a oportunidade de restaurar quaisquer dados da cópia de segurança da sua Conta Google."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"A palavra-passe introduzida está correta mas, infelizmente, os dados estão corrompidos. \n\nPara continuar a utilizar o tablet, é necessário efetuar uma reposição de fábrica. Quando configurar o tablet após a reposição, terá a oportunidade de restaurar quaisquer dados da cópia de segurança da sua Conta /e/."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"A palavra-passe introduzida está correta mas, infelizmente, os dados estão corrompidos. \n\nPara continuar a utilizar o telemóvel, é necessário efetuar uma reposição de fábrica. Quando configurar o telemóvel após a reposição, terá a oportunidade de restaurar quaisquer dados da cópia de segurança da sua Conta /e/."</string>
     <string name="crypt_keeper_switch_input_method" msgid="4168332125223483198">"Alternar o método de introdução"</string>
     <string name="suggested_lock_settings_title" msgid="8971630898700461034">"Definir bloqueio de ecrã"</string>
     <string name="suggested_lock_settings_summary" msgid="8778462376012231110">"Proteger o dispositivo"</string>
@@ -1347,8 +1347,8 @@
     <string name="network_reset_not_available" msgid="7188610385577164676">"A reposição de rede não está disponível para este utilizador"</string>
     <string name="reset_network_complete_toast" msgid="787829973559541880">"As definições de rede foram repostas"</string>
     <string name="master_clear_title" msgid="3531267871084279512">"Apagar todos os dados (reposição de dados de fábrica)"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Serão apagados todos os dados do "<b>"armazenamento interno"</b>" do tablet, incluindo:\n\n"<li>"A Conta Google"</li>\n<li>"Dados e definições do sistema e da aplicação"</li>\n<li>"Aplicações transferidas"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Serão apagados todos os dados do "<b>"armazenamento interno"</b>" do telemóvel, incluindo:\n\n"<li>"A Conta Google"</li>\n<li>"Dados e definições do sistema e da aplicação"</li>\n<li>"Aplicações transferidas"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Serão apagados todos os dados do "<b>"armazenamento interno"</b>" do tablet, incluindo:\n\n"<li>"A Conta /e/"</li>\n<li>"Dados e definições do sistema e da aplicação"</li>\n<li>"Aplicações transferidas"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Serão apagados todos os dados do "<b>"armazenamento interno"</b>" do telemóvel, incluindo:\n\n"<li>"A Conta /e/"</li>\n<li>"Dados e definições do sistema e da aplicação"</li>\n<li>"Aplicações transferidas"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"Actualmente, tem sessão iniciada nas seguintes contas:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"Existem outros utilizadores presentes neste dispositivo.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"Música"</li>\n<li>"Fotografias"</li>\n<li>"Outros dados do utilizador"</li></string>
@@ -1433,7 +1433,7 @@
     <string name="location_scanning_bluetooth_always_scanning_title" msgid="5444989508204520019">"Procurar por Bluetooth"</string>
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="8602726521250591852">"Melhorar a localização ao permitir que os serviços e as aplicações do sistema detetem dispositivos Bluetooth a qualquer momento."</string>
     <string name="location_network_based" msgid="9134175479520582215">"Wi-Fi e localização de rede de telemóvel"</string>
-    <string name="location_neighborhood_level" msgid="5141318121229984788">"Permitir que aplic. usem o serv. localiz. Google p/ calcular mais rapida/ a sua localização. Dados localização recolhidos e enviados à Google."</string>
+    <string name="location_neighborhood_level" msgid="5141318121229984788">"Permitir que aplic. usem o serv. localiz. /e/ p/ calcular mais rapida/ a sua localização. Dados localização recolhidos e enviados à /e/."</string>
     <string name="location_neighborhood_level_wifi" msgid="4234820941954812210">"Localização determinada por Wi-Fi"</string>
     <string name="location_gps" msgid="8392461023569708478">"Satélites GPS"</string>
     <string name="location_street_level" product="tablet" msgid="1669562198260860802">"Permitir que as aplicações utilizem o GPS do tablet para localizar a sua posição"</string>
@@ -1441,8 +1441,8 @@
     <string name="assisted_gps" msgid="4649317129586736885">"Utilizar GPS assistido"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"Utilizar o servidor para auxiliar o GPS (desmarque esta opção para reduzir a utilização da rede)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"Utilizar o servidor para auxiliar o GPS (desmarque esta opção para melhorar o desempenho do GPS)"</string>
-    <string name="use_location_title" msgid="5206937465504979977">"Localização e pesquisa do Google"</string>
-    <string name="use_location_summary" msgid="3978805802386162520">"Permitir que o Google utilize a sua localização para melhorar os resultados da pesquisa e os outros serviços"</string>
+    <string name="use_location_title" msgid="5206937465504979977">"Localização e pesquisa do /e/"</string>
+    <string name="use_location_summary" msgid="3978805802386162520">"Permitir que o /e/ utilize a sua localização para melhorar os resultados da pesquisa e os outros serviços"</string>
     <string name="location_access_title" msgid="7064108942964081243">"Acesso à localização"</string>
     <string name="location_access_summary" msgid="69031404093194341">"Permitir que aplic. com permissão utilizem informações sobre a sua localização"</string>
     <string name="location_sources_heading" msgid="1278732419851088319">"Origens da localização"</string>
@@ -2238,7 +2238,7 @@
     <string name="backup_section_title" msgid="7952232291452882740">"Fazer cópia de segurança e restaurar"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"Dados pessoais"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"Fazer cópia de segurança dos dados"</string>
-    <string name="backup_data_summary" msgid="708773323451655666">"Fazer cópia de segurança de dados da aplicação, palavras-passe Wi-Fi e outras definições para os servidores da Google"</string>
+    <string name="backup_data_summary" msgid="708773323451655666">"Fazer cópia de segurança de dados da aplicação, palavras-passe Wi-Fi e outras definições para os servidores da /e/"</string>
     <string name="backup_configure_account_title" msgid="3790872965773196615">"Cópia de segurança da conta"</string>
     <string name="include_app_data_title" msgid="2829970132260278394">"Incluir dados de aplicações"</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"Restauro automático"</string>
@@ -2246,7 +2246,7 @@
     <string name="backup_inactive_title" msgid="685838037986644604">"O serviço de cópia de segurança não está ativo"</string>
     <string name="backup_configure_account_default_summary" msgid="2436933224764745553">"Actualmente, nenhuma conta está a armazenar dados com cópia de segurança"</string>
     <string name="backup_erase_dialog_title" msgid="1027640829482174106"></string>
-    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"Deixar de fazer cópia de segurança de palavras-passe de rede Wi-Fi, marcadores, outras definições e dados da aplicação, bem como apagar todas as cópias nos servidores da Google?"</string>
+    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"Deixar de fazer cópia de segurança de palavras-passe de rede Wi-Fi, marcadores, outras definições e dados da aplicação, bem como apagar todas as cópias nos servidores da /e/?"</string>
     <string name="fullbackup_erase_dialog_message" msgid="694766389396659626">"Pretende parar de fazer cópias de segurança dos dados do dispositivo (como palavras-passe de Wi-Fi e o histórico de chamadas) e dos dados das aplicações (como as definições e os ficheiros armazenados pelas aplicações) e apagar todas as cópias nos servidores remotos?"</string>
     <string name="fullbackup_data_summary" msgid="960850365007767734">"Faça cópias de segurança automáticas dos dados do dispositivo (como palavras-passe de Wi-Fi e o histórico de chamadas) e dos dados das aplicações (como as definições e os ficheiros armazenados pelas aplicações) remotamente.\n\nQuando ativa a cópia de segurança automática, os dados do dispositivo e das aplicações são guardados remotamente de forma periódica. Os dados das aplicações podem ser quaisquer dados que uma aplicação tenha guardado (com base nas definições do programador), incluindo dados potencialmente confidenciais como contactos, mensagens e fotos."</string>
     <string name="device_admin_settings_title" msgid="4960761799560705902">"Definições de administração do dispositivo"</string>
@@ -2333,7 +2333,7 @@
     <string name="sync_gmail" msgid="714886122098006477">"Gmail"</string>
     <string name="sync_calendar" msgid="9056527206714733735">"Calendário"</string>
     <string name="sync_contacts" msgid="9174914394377828043">"Contactos"</string>
-    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Bem-vindo ao Google Sync!"</font>" \nUma abordagem da Google à sincronização de dados, que permite aceder aos contactos, compromissos e outros itens a partir de qualquer local onde se encontre."</string>
+    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Bem-vindo ao /e/ Sync!"</font>" \nUma abordagem da /e/ à sincronização de dados, que permite aceder aos contactos, compromissos e outros itens a partir de qualquer local onde se encontre."</string>
     <string name="header_application_sync_settings" msgid="6205903695598000286">"Definições de sincronização da aplicação"</string>
     <string name="header_data_and_synchronization" msgid="5165024023936509896">"Dados e sincronização"</string>
     <string name="preference_change_password_title" msgid="8955581790270130056">"Alterar palavra-passe"</string>
@@ -2422,8 +2422,8 @@
     <string name="data_usage_app_restrict_dialog" msgid="1466689968707308512">"Esta funcionalidade pode fazer com que uma aplicação que dependa de dados em segundo plano deixe de funcionar quando estiverem disponíveis apenas redes móveis.\n\nPoderá encontrar controlos de utilização de dados mais adequados nas definições disponíveis dentro da aplicação."</string>
     <string name="data_usage_restrict_denied_dialog" msgid="55012417305745608">"A restrição de dados de segundo plano só é possível se tiver definido um limite de dados móveis."</string>
     <string name="data_usage_auto_sync_on_dialog_title" msgid="2438617846762244389">"Ativar sinc. auto. de dados?"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"Qualquer alteração que efetue nas contas a partir da Web será copiada automaticamente para o tablet.\n\nAlgumas contas também podem copiar automaticamente para a Web qualquer alteração que efetue no tablet. É assim que funciona uma Conta Google."</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"Qualquer alteração que efetue nas contas a partir da Web será copiada automaticamente para o telemóvel.\n\nAlgumas contas também podem copiar automaticamente para a Web qualquer alteração que efetue no telemóvel. É assim que funciona uma Conta Google."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"Qualquer alteração que efetue nas contas a partir da Web será copiada automaticamente para o tablet.\n\nAlgumas contas também podem copiar automaticamente para a Web qualquer alteração que efetue no tablet. É assim que funciona uma Conta /e/."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"Qualquer alteração que efetue nas contas a partir da Web será copiada automaticamente para o telemóvel.\n\nAlgumas contas também podem copiar automaticamente para a Web qualquer alteração que efetue no telemóvel. É assim que funciona uma Conta /e/."</string>
     <string name="data_usage_auto_sync_off_dialog_title" msgid="9013139130490125793">"Desativar sincronização automática?"</string>
     <string name="data_usage_auto_sync_off_dialog" msgid="4025938250775413864">"Esta ação irá conservar a utilização de dados e bateria, mas é necessário sincronizar manualmente cada conta para recolher informações recentes. Não irá receber notificações quando ocorrerem atualizações."</string>
     <string name="data_usage_cycle_editor_title" msgid="1373797281540188533">"Data de reposição de ciclo de utilização"</string>
@@ -3705,7 +3705,7 @@
     <string name="webview_disabled_for_user" msgid="1216426047631256825">"(desativ. para o utilizador <xliff:g id="USER">%s</xliff:g>)"</string>
     <string name="autofill_app" msgid="7338387238377914374">"Preenchimento automático"</string>
     <string name="autofill_keywords" msgid="7485591824120812710">"automático, preenchimento, preenchimento automático"</string>
-    <string name="autofill_confirmation_message" msgid="2784869528908005194">"&lt;b&gt;Certifique-se de que confia nesta aplicação&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=O Preenchimento automático do Google&gt;%1$s&lt;/xliff:g&gt; utiliza o que está no ecrã para determinar o que pode ser preenchido automaticamente."</string>
+    <string name="autofill_confirmation_message" msgid="2784869528908005194">"&lt;b&gt;Certifique-se de que confia nesta aplicação&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=O Preenchimento automático do /e/&gt;%1$s&lt;/xliff:g&gt; utiliza o que está no ecrã para determinar o que pode ser preenchido automaticamente."</string>
     <string name="device_theme" msgid="4571803018917608588">"Tema do dispositivo"</string>
     <string name="default_theme" msgid="7085644992078579076">"Predefinição"</string>
     <string name="storage_manager_indicator" msgid="1516810749625915020">"Gestor de armazenamento: <xliff:g id="STATUS">^1</xliff:g>"</string>
