--- a/res/values-zh-rHK/strings.xml
+++ b/res/values-zh-rHK/strings.xml
@@ -445,11 +445,11 @@
     <string name="crypt_keeper_warn_wipe" msgid="2738374897337991667">"警告：解鎖嘗試次數只剩 <xliff:g id="COUNT">^1</xliff:g> 次！如果持續失敗，您的裝置將被清除。"</string>
     <string name="crypt_keeper_enter_password" msgid="2223340178473871064">"輸入密碼"</string>
     <string name="crypt_keeper_failed_title" msgid="7133499413023075961">"加密失敗"</string>
-    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"加密程序中斷且未完成，因此您無法再存取平板電腦上的資料。\n\n如要繼續使用平板電腦，您必須恢復原廠設定。完成重設後，您可以在設定平板電腦時，還原先前備份至「Google 帳戶」的資料。"</string>
-    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"加密程序中斷且未完成，因此您無法再存取手機上的資料。\n\n如要繼續使用手機，您必須恢復原廠設定。完成重設後，您可以在設定手機時，還原先前備份至「Google 帳戶」的資料。"</string>
+    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"加密程序中斷且未完成，因此您無法再存取平板電腦上的資料。\n\n如要繼續使用平板電腦，您必須恢復原廠設定。完成重設後，您可以在設定平板電腦時，還原先前備份至「/e/ 帳戶」的資料。"</string>
+    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"加密程序中斷且未完成，因此您無法再存取手機上的資料。\n\n如要繼續使用手機，您必須恢復原廠設定。完成重設後，您可以在設定手機時，還原先前備份至「/e/ 帳戶」的資料。"</string>
     <string name="crypt_keeper_data_corrupt_title" msgid="8759119849089795751">"解密失敗"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"您輸入的密碼正確，不過您的數據已損毀。\n\n如要繼續使用，您必須將平板電腦恢復原廠設定。經過重設後，您可以在設定平板電腦時將早前備份到個人 Google 帳戶的數據全部還原。"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"您輸入的密碼正確，不過您的數據已損毀。\n\n如要繼續使用，您必須將手機恢復原廠設定。經過重設後，您可以在設定手機時將早前備份到個人 Google 帳戶的數據全部還原。"</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"您輸入的密碼正確，不過您的數據已損毀。\n\n如要繼續使用，您必須將平板電腦恢復原廠設定。經過重設後，您可以在設定平板電腦時將早前備份到個人 /e/ 帳戶的數據全部還原。"</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"您輸入的密碼正確，不過您的數據已損毀。\n\n如要繼續使用，您必須將手機恢復原廠設定。經過重設後，您可以在設定手機時將早前備份到個人 /e/ 帳戶的數據全部還原。"</string>
     <string name="crypt_keeper_switch_input_method" msgid="4168332125223483198">"切換輸入法"</string>
     <string name="suggested_lock_settings_title" msgid="8971630898700461034">"設定螢幕鎖定"</string>
     <string name="suggested_lock_settings_summary" msgid="8778462376012231110">"保護您的裝置"</string>
@@ -1348,8 +1348,8 @@
     <string name="network_reset_not_available" msgid="7188610385577164676">"這位使用者無法重設網絡"</string>
     <string name="reset_network_complete_toast" msgid="787829973559541880">"網絡設定已重設"</string>
     <string name="master_clear_title" msgid="3531267871084279512">"清除所有資料 (回復原廠設定)"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"這會清除您平板電腦"<b>"內部儲存裝置"</b>"中的所有資料，包括：\n\n"<li>"您的 Google 帳戶"</li>\n<li>"系統和應用程式資料及設定"</li>\n<li>"已下載的應用程式"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"這會清除您手機"<b>"內部儲存裝置"</b>"中的所有資料，包括：\n\n"<li>"您的 Google 帳戶"</li>\n<li>"系統和應用程式資料及設定"</li>\n<li>"已下載的應用程式"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"這會清除您平板電腦"<b>"內部儲存裝置"</b>"中的所有資料，包括：\n\n"<li>"您的 /e/ 帳戶"</li>\n<li>"系統和應用程式資料及設定"</li>\n<li>"已下載的應用程式"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"這會清除您手機"<b>"內部儲存裝置"</b>"中的所有資料，包括：\n\n"<li>"您的 /e/ 帳戶"</li>\n<li>"系統和應用程式資料及設定"</li>\n<li>"已下載的應用程式"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"您目前已登入下列帳戶：\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"這部裝置上還有其他使用者。\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"音樂"</li>\n<li>"相片"</li>\n<li>"其他使用者資料"</li></string>
@@ -1434,7 +1434,7 @@
     <string name="location_scanning_bluetooth_always_scanning_title" msgid="5444989508204520019">"藍牙掃瞄"</string>
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="8602726521250591852">"允許系統應用程式和服務隨時偵測藍牙裝置，以提高位置資訊的準確度。"</string>
     <string name="location_network_based" msgid="9134175479520582215">"Wi-Fi 和流動網絡位置"</string>
-    <string name="location_neighborhood_level" msgid="5141318121229984788">"允許應用程式使用 Google 的位置資訊服務，藉此更快確定您的約略位置。系統會收集匿名的位置資料傳送給 Google。"</string>
+    <string name="location_neighborhood_level" msgid="5141318121229984788">"允許應用程式使用 /e/ 的位置資訊服務，藉此更快確定您的約略位置。系統會收集匿名的位置資料傳送給 /e/。"</string>
     <string name="location_neighborhood_level_wifi" msgid="4234820941954812210">"根據 Wi-Fi 確定位置"</string>
     <string name="location_gps" msgid="8392461023569708478">"GPS 衛星"</string>
     <string name="location_street_level" product="tablet" msgid="1669562198260860802">"允許應用程式使用平板電腦的 GPS 找出您的精確位置"</string>
@@ -1442,8 +1442,8 @@
     <string name="assisted_gps" msgid="4649317129586736885">"使用輔助 GPS"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"使用伺服器輔助 GPS (取消勾選即可降低網絡使用量)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"使用伺服器輔助 GPS (取消勾選即可提升 GPS 效能)"</string>
-    <string name="use_location_title" msgid="5206937465504979977">"位置和 Google 搜尋"</string>
-    <string name="use_location_summary" msgid="3978805802386162520">"允許 Google 使用位置資訊來改善搜尋結果和其他服務。"</string>
+    <string name="use_location_title" msgid="5206937465504979977">"位置和 /e/ 搜尋"</string>
+    <string name="use_location_summary" msgid="3978805802386162520">"允許 /e/ 使用位置資訊來改善搜尋結果和其他服務。"</string>
     <string name="location_access_title" msgid="7064108942964081243">"存取我的位置資訊"</string>
     <string name="location_access_summary" msgid="69031404093194341">"允許提出權限要求的應用程式使用您的位置資訊"</string>
     <string name="location_sources_heading" msgid="1278732419851088319">"位置資訊來源"</string>
@@ -2241,7 +2241,7 @@
     <string name="backup_section_title" msgid="7952232291452882740">"備份與還原"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"個人資料"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"備份我的資料"</string>
-    <string name="backup_data_summary" msgid="708773323451655666">"將應用程式資料、Wi-Fi 密碼及其他設定備份到 Google 伺服器"</string>
+    <string name="backup_data_summary" msgid="708773323451655666">"將應用程式資料、Wi-Fi 密碼及其他設定備份到 /e/ 伺服器"</string>
     <string name="backup_configure_account_title" msgid="3790872965773196615">"備份帳戶"</string>
     <string name="include_app_data_title" msgid="2829970132260278394">"包括應用程式數據"</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"自動還原"</string>
@@ -2249,7 +2249,7 @@
     <string name="backup_inactive_title" msgid="685838037986644604">"備份服務尚未啟用"</string>
     <string name="backup_configure_account_default_summary" msgid="2436933224764745553">"目前沒有任何帳戶儲存備份資料"</string>
     <string name="backup_erase_dialog_title" msgid="1027640829482174106"></string>
-    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"要停止備份您的 Wi-Fi 密碼、書籤、其他設定以及應用程式資料，並清除 Google 伺服器上儲存的所有副本嗎？"</string>
+    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"要停止備份您的 Wi-Fi 密碼、書籤、其他設定以及應用程式資料，並清除 /e/ 伺服器上儲存的所有副本嗎？"</string>
     <string name="fullbackup_erase_dialog_message" msgid="694766389396659626">"停止備份裝置資料 (例如 Wi-Fi 密碼和通話記錄) 和應用程式資料 (例如由應用程式儲存的設定和檔案)，並清除遠端伺服器內的所有副本？"</string>
     <string name="fullbackup_data_summary" msgid="960850365007767734">"自動遙距備份裝置資料 (例如 Wi-Fi 密碼和通話記錄) 和應用程式資料 (例如由應用程式儲存的設定和檔案)。\n\n啟用自動備份功能後，裝置和應用程式資料會定時以遙距方式儲存。應用程式資料可以是由應用程式儲存的任何資料 (視乎開發設定而定)，包括可能視為敏感的資料，如通訊錄、訊息及相片。"</string>
     <string name="device_admin_settings_title" msgid="4960761799560705902">"裝置管理設定"</string>
@@ -2336,7 +2336,7 @@
     <string name="sync_gmail" msgid="714886122098006477">"Gmail"</string>
     <string name="sync_calendar" msgid="9056527206714733735">"日曆"</string>
     <string name="sync_contacts" msgid="9174914394377828043">"通訊錄"</string>
-    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"歡迎使用 Google Sync！"</font>\n"這是 Google 提供的資料同步處理工具，可讓您隨時隨地存取通訊錄、約會等資料。"</string>
+    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"歡迎使用 /e/ Sync！"</font>\n"這是 /e/ 提供的資料同步處理工具，可讓您隨時隨地存取通訊錄、約會等資料。"</string>
     <string name="header_application_sync_settings" msgid="6205903695598000286">"應用程式同步設定"</string>
     <string name="header_data_and_synchronization" msgid="5165024023936509896">"資料及同步處理"</string>
     <string name="preference_change_password_title" msgid="8955581790270130056">"更改密碼"</string>
@@ -2425,8 +2425,8 @@
     <string name="data_usage_app_restrict_dialog" msgid="1466689968707308512">"如果採用這項功能，當只可以連接流動網絡時，需要使用背景資料的應用程式可能會停止運作。\n\n您可以前往應用程式內的設定，找出更多適合的數據用量控制。"</string>
     <string name="data_usage_restrict_denied_dialog" msgid="55012417305745608">"您必須先設定流動數據上限，才能限制背景數據。"</string>
     <string name="data_usage_auto_sync_on_dialog_title" msgid="2438617846762244389">"開啟資料自動同步功能？"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"您在網絡上對帳戶作出的任何變更都會自動複製到您的平板電腦。\n\n部分帳戶也可能自動將您在平板電腦上作出的所有變更複製到網絡上。Google 帳戶會按照這種方式運作。"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"您在網絡上對帳戶作出的任何變更都會自動複製到您的手機。\n\n部分帳戶也可能自動將您在手機上作出的所有變更複製到網絡上。Google 帳戶會按照這種方式運作。"</string>
+    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"您在網絡上對帳戶作出的任何變更都會自動複製到您的平板電腦。\n\n部分帳戶也可能自動將您在平板電腦上作出的所有變更複製到網絡上。/e/ 帳戶會按照這種方式運作。"</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"您在網絡上對帳戶作出的任何變更都會自動複製到您的手機。\n\n部分帳戶也可能自動將您在手機上作出的所有變更複製到網絡上。/e/ 帳戶會按照這種方式運作。"</string>
     <string name="data_usage_auto_sync_off_dialog_title" msgid="9013139130490125793">"關閉資料自動同步功能？"</string>
     <string name="data_usage_auto_sync_off_dialog" msgid="4025938250775413864">"這樣可以節省數據用量和電池用量，但您必須手動同步每個帳戶才能獲得最新資料，而且在有更新時不會收到通知。"</string>
     <string name="data_usage_cycle_editor_title" msgid="1373797281540188533">"用量週期重設日期"</string>
@@ -3708,7 +3708,7 @@
     <string name="webview_disabled_for_user" msgid="1216426047631256825">"(已為使用者<xliff:g id="USER">%s</xliff:g>停用)"</string>
     <string name="autofill_app" msgid="7338387238377914374">"自動填入服務"</string>
     <string name="autofill_keywords" msgid="7485591824120812710">"自動, 填入, 自動填入"</string>
-    <string name="autofill_confirmation_message" msgid="2784869528908005194">"&lt;b&gt;請確定您信任此應用程式&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=Google Autofill&gt;%1$s&lt;/xliff:g&gt; 應用程式會根據您畫面上的內容判斷可自動填入的資料。"</string>
+    <string name="autofill_confirmation_message" msgid="2784869528908005194">"&lt;b&gt;請確定您信任此應用程式&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=/e/ Autofill&gt;%1$s&lt;/xliff:g&gt; 應用程式會根據您畫面上的內容判斷可自動填入的資料。"</string>
     <string name="device_theme" msgid="4571803018917608588">"裝置主題"</string>
     <string name="default_theme" msgid="7085644992078579076">"預設"</string>
     <string name="storage_manager_indicator" msgid="1516810749625915020">"儲存空間管理員：<xliff:g id="STATUS">^1</xliff:g>"</string>
